CI images update

--- a/images/chieu-nhua-ha-noi-140x190/config.ini
+++ b/images/chieu-nhua-ha-noi-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 lastopen = 2024-08-03 06:31:32
 
 [search]
-lastsearch = 2024-08-05 18:35:56
+lastsearch = 2024-08-05 20:47:21
 
 [www.diepxuan.com]
 match = 48.0%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 [www.facebook.com]
 match = 20.0%%
 title = Chiếu Trúc Tre Việt Nam | Hanoi
-url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
+url = https://www.facebook.com/chieutructrevietnam/?locale=el_GR
 
 [demxanh.com]
-match = -20.0%%
-title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
-url = https://demxanh.com/chieu-truc-hat-huong-truc.html
+match = -52.0%%
+title = Đệm cao su Vạn Thành Standard giá rẻ nhất Hà Nội
+url = https://demxanh.com/dem-cao-su-van-thanh-standard.html
 
 [chieucoi.com.vn]
 match = -68.0%%
@@ -52,9 +52,9 @@ title = BÁO GIÁ CHIẾU TRE TÂY BẮC CHẤT LƯỢNG 100%% - Kho đệm
 url = https://khodem.vn/bao-gia-chieu-tre-tay-bac-chat-luong-100/
 
 [shopee.vn]
-match = -44.0%%
-title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
-url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
+match = -36.0%%
+title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/chiếu/nhựa
 
 [demviethome.vn]
 match = -24.0%%
