--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-08-05 19:37:09
+lastsearch = 2024-08-05 20:50:46
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
 url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -29.2%%
-title = màn gấp vuông giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn gấp vuông
+match = -54.2%%
+title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
+url = https://shopee.vn/list/màn chụp/vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -160,4 +160,9 @@ url = https://bongdaplus.vn/v-league/nam-dinh-tau-ngoai-binh-da-nang-nhat-v-leag
 match = -41.7%%
 title = Vòng loại giải bóng đá Vô địch U15 Quốc gia 2024
 url = https://vff.org.vn/vong-loai-giai-bong-da-vo-dich-u15-quoc-gia-2024-ket-qua-luot-2/
+
+[baomoi.com]
+match = -66.7%%
+title = Hoàn thành cầu Bến Mới nối Nam Định - Ninh Bình trong ...
+url = https://baomoi.com/hoan-thanh-cau-ben-moi-noi-nam-dinh-ninh-binh-trong-thang-10-2024-c49822274.epi
 
