--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-05 20:08:29
+lastsearch = 2024-08-05 20:45:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Bộ ga gối chun chan happy 16
 url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 
 [www.facebook.com]
-match = 23.8%%
-title = Chăn ga gối đệm happy
-url = https://www.facebook.com/Changaxuattaikho/
+match = 7.7%%
+title = Happiness Việt Nam | Hanoi
+url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = -32.1%%
-title = Bộ chăn ga gối, ga giường, vỏ chăn, vỏ gối drap nệm ga ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-ga-giường-vỏ-chăn-vỏ-gối-drap-nệm-ga-chun-ra-giường-chăn-ga-gối-đệm-Happy-Home-i.600110082.15146634205
+match = -21.4%%
+title = Bộ ga gối trải giường 2m2x2m bo chun miễn phí, bộ ...
+url = https://shopee.vn/Bộ-ga-gối-trải-giường-2m2x2m-bo-chun-miễn-phí-bộ-ga-giường-cotton-poly-mềm-mịn-thấm-hút-mồ-hôi-Happy-Home-i.600110082.20851466621
 
 [chandem.com.vn]
 match = 17.9%%
@@ -27,9 +27,9 @@ title = Bộ chăn ga gối Happy Wedding Solid 84
 url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 
 [demxanh.com]
-match = 0.0%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOooy7JMkh7LXhvw54UgsYiUy1m30D6efYfDZ-3k2xXDAJBY1Ia7W
+match = 14.3%%
+title = Bộ ga gối chun chần xơ đậu nành mã 16 Lá tre voi
+url = https://demxanh.com/bo-ga-goi-chun-chan-xo-dau-nanh-ma-16-la-tre-voi.html
 
 [thegioinem.com]
 match = 17.9%%
@@ -102,9 +102,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [uannga.vn]
-match = 0.0%%
-title = Bộ Ga chun Modar
-url = https://uannga.vn/index.php/shops/Chan-Ga-Dreamland/bo-ga-chun-chan-modar-160-200.html
+match = -50.0%%
+title = Bộ Ga chun Modar - Nhà phân phối Chăn Ga Gối Đệm Uân Nga ...
+url = https://uannga.vn/index.php/shops/Chan-Ga-Dreamland/bo-ga-chun-chan-modar-160-200-478.html
 
 [demviet.vn]
 match = 17.4%%
