--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-05 19:35:04
+lastsearch = 2024-08-05 20:55:37
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -37,9 +37,9 @@ title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
 url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
-match = -100.0%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063 - Sông Hồng ...
-url = https://songhong.info/chan-ga-goi-bc63
+match = -19.0%%
+title = Chăn ga gối Sông Hồng dòng Basic mã BC-14
+url = https://songhong.info/chan-ga-goi-bc14
 
 [demxanh.com]
 match = -52.4%%
