--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-05 11:29:38
+lastsearch = 2024-08-05 20:57:40
 
 [shopee.vn]
-match = 56.2%%
-title = chăn cừu mai rùa đen
-url = https://shopee.vn/chăn-cừu-mai-rùa-đen-i.39468618.939856303
+match = -162.5%%
+title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
+url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
 match = -162.5%%
@@ -52,9 +52,9 @@ title = HSU YING-HUI TO
 url = https://www.cia.gov/readingroom/docs/CIA-RDP84-00581R000100220008-5.pdf
 
 [avibase.bsc-eoc.org]
-match = -237.5%%
-title = Khao Sib Ha Chan National Park bird checklist - Avibase - Bird ...
-url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH02ct02
+match = -275.0%%
+title = Phu Rua National Park bird checklist - Avibase - Bird Checklists of ...
+url = https://avibase.bsc-eoc.org/checklist.jsp?region=TH04le03
 
 [partner.goodsmile.info]
 match = 6.2%%
