--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-05 15:48:49
+lastsearch = 2024-08-05 20:48:25
 
 [vinatools.com]
 match = -140.0%%
@@ -182,9 +182,9 @@ title = [NGẪU NHIÊN] Dụng cụ nhảy dây có đếm số vòng D216
 url = https://www.lazada.vn/products/ngau-nhien-dung-cu-nhay-day-co-dem-so-vong-d216-rikob-shop-i2433883429.html
 
 [shopee.vn]
-match = -240.0%%
-title = Đầu lắc xi lanh FJ - Khớp nối đầu lắc các cỡ M5,6,8,10,12, ...
-url = https://shopee.vn/Đầu-lắc-xi-lanh-FJ-Khớp-nối-đầu-lắc-các-cỡ-M5-6-8-10-12-14-16-18-20-27-(chính-hãng-SNS)-i.1096166656.24605536524
+match = -226.7%%
+title = Que hàn sắt KOBE-16 D2.6 - 3.2 - 4.0 - 5.0 ( Thái Lan )
+url = https://shopee.vn/product/686340132/24951807725
 
 [www.ministop.vn]
 match = -93.3%%
@@ -237,8 +237,8 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [www.axel-gl.com]
-match = -213.3%%
-title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông ...
+match = -260.0%%
+title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông qua lỗ ...
 url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 
 [hcmyu.hpu2.edu.vn]
