--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-05 08:11:25
+lastsearch = 2024-08-05 20:56:41
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -47,9 +47,9 @@ title = Ga giường chống thấm nước hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ga giường chống thấm nước
 
 [goodmamastore.com]
-match = -63.2%%
-title = Ga Chống Thấm Goodmama - Họa tiết Lá Đại
-url = https://goodmamastore.com/products/ga-chống-thấm-goodmama-hinh-hoa-day-xanh
+match = -94.7%%
+title = Ga chống thấm Goodmama - Mẫu Thỏ hồng dễ thương
+url = https://goodmamastore.com/products/ga-chống-thấm-bọc-dệm-cotton-bọc-dệm-cao-cấp-goodmama-cun-hồng
 
 [www.facebook.com]
 match = -121.1%%
@@ -79,7 +79,7 @@ url = https://www.tiktok.com/@funkyglassworks/video/7135866426522537262
 [lovemama.vn]
 match = -131.6%%
 title = Ga chống thấm LoveMama vải Cotton chính hãng, giá tốt 2024
-url = https://lovemama.vn/ga-chong-tham?srsltid=AfmBOopLfKI7GRD1RYKZwB6Oun-1D83MItVKxd-7tliT1QGB2Qu_VnU6
+url = https://lovemama.vn/ga-chong-tham
 
 [www.shelbynews.com]
 match = -157.9%%
