--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-05 17:17:57
+lastsearch = 2024-08-05 20:45:15
 
 [www.tui.co.uk]
 match = -86.7%%
@@ -142,8 +142,8 @@ title = Marella Discovery 2 | Asia Cruise | Singapore
 url = https://www.youtube.com/watch?v=aFJ2NNWOP-E
 
 [www.flickr.com]
-match = -253.3%%
-title = TUI Airways G-TUIF "Neil" | 15/02/24. Terminal 3, ... - Flickr
+match = -240.0%%
+title = TUI Airways G-TUIF "Neil" | 15/02/24. Terminal 3, Changi ...
 url = https://www.flickr.com/photos/hhhumber/53532795013
 
 [sg.trip.com]
