--- a/images/tui-warmdream-150x190x09/config.ini
+++ b/images/tui-warmdream-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-150x190x09.html
 lastopen = 2024-06-17 10:46:30
 
 [search]
-lastsearch = 2024-08-05 17:45:47
+lastsearch = 2024-08-05 20:46:38
 
 [www.diepxuan.com]
 match = 10.5%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOoqqMahNglPlQzoHAmzCLWgAL-OVOzAMDgb8uiQAbDJJvdjZLbaI
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.roadtripamerica.com]
 match = -75.0%%
