--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-05 18:23:07
+lastsearch = 2024-08-05 21:15:02
 
 [www.youtube.com]
-match = -89.5%%
-title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
-url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
+match = -147.4%%
+title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
+url = https://www.youtube.com/watch?v=ASsdVo0WBew
 
 [trangtrisanvuon.vn]
 match = -147.4%%
