--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-08-05 10:46:53
+lastsearch = 2024-08-05 21:11:51
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = 0.0%%
+title = Thảm trải giường cao su non màu ghi
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
 
 [www.lazada.vn]
 match = -113.6%%
@@ -52,8 +52,8 @@ title = Nên chọn mua giường ngủ 1m6 x 2m hay 1m8 x 2m
 url = https://noithatviva.vn/tin-tuc/nen-chon-mua-giuong-ngu-1m6-x-2m-hay-1m8-x-2m.html
 
 [shopee.vn]
-match = -45.5%%
-title = thảm trải giường giá tốt Tháng 6, 2024 | Mua ngay
+match = -50.0%%
+title = thảm trải giường giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải giường
 
 [demre.com.vn]
