--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-05 21:00:48
+lastsearch = 2024-08-05 21:40:11
 
 [shopee.vn]
-match = 7.4%%
-title = CHĂN LÔNG TUYẾT NHUNG CAO CẤP Thái Lan Loại 4kg
-url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg-i.126028938.4857799045
+match = -51.9%%
+title = chăn nhung tuyết, chăn nhung loại dày size đại cao cấp ( 3kg
+url = https://shopee.vn/chăn-nhung-tuyết-chăn-nhung-loại-dày-size-đại-cao-cấp-(-3kg-4kg-5kg-)-i.442103984.12041087761
 
 [h5.lazada.vn]
 match = -11.1%%
-title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
-url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
+url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [www.lazada.vn]
 match = -44.4%%
@@ -87,9 +87,9 @@ title = Giấu vợ mang tiền mua nhà đi đu đỉnh vàng
 url = https://stockbiz.vn/tin-tuc/giau-vo-mang-tien-mua-nha-di-du-dinh-vang-gio-nha-khong-co-tu-co-tien-ty-thanh-ra-no-nan/26329771
 
 [m.facebook.com]
-match = -74.1%%
-title = If you are coming to Penang, attempt to eat as the locals eat
-url = https://m.facebook.com/groups/penangtraveltips/posts/7838451336245791/
+match = -25.9%%
+title = MR WORLD THAILAND 2024 🇹🇭 Bomb Jeerawat...
+url = https://m.facebook.com/story.php/?story_fbid=1077736020375183&id=100044163863243
 
 [thitruongsi.com]
 match = -7.4%%
