--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-08-05 11:28:18
+lastsearch = 2024-08-05 21:38:50
 
 [chieutruc.info]
 match = -60.0%%
@@ -14,7 +14,7 @@ url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html?srsltid=AfmBOoourq74LN-TZMcK6v0Du6fnUZ6_n83Ullw2nCLCF-h0nRmQWuIz
 
 [shopee.vn]
 match = -64.0%%
@@ -69,7 +69,7 @@ url = https://antv.gov.vn/phap-luat-3/cong-an-cao-bang-bat-doi-tuong-lua-dao-hon
 [www.diepxuan.com]
 match = 32.0%%
 title = Chiếu cây Cao Bằng lụa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-180x200.html?srsltid=AfmBOorA9EFX5wAzs0iDetqecWMbtJm3yPvxdy5kpdAZgwR129jiM-G7
 
 [olm.vn]
 match = -80.0%%
