--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-05 20:07:07
+lastsearch = 2024-08-05 21:42:37
 
 [shopee.vn]
 match = -41.7%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = 29.2%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html?srsltid=AfmBOooO1CySF87ZIMn7djKwExBmvyh-N8js7s2tiLdgBP5GE-aptu4H
 
 [goni.vn]
 match = 4.2%%
@@ -69,7 +69,7 @@ url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 [foreverbedding.net]
 match = 37.5%%
 title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa
+url = https://foreverbedding.net/chieu-dieu-hoa?srsltid=AfmBOoq57jWlp7nbdQ1wAE4CYGvpa0KNKNvLQmex45192v0-AgyLfJB1
 
 [joliefam.vn]
 match = -37.5%%
