--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-05 18:14:02
+lastsearch = 2024-08-05 21:46:48
 
 [burningman.org]
 match = 0.0%%
@@ -502,9 +502,9 @@ title = Personal and Business Banking | United Community
 url = https://www.ucbi.com/
 
 [store.steampowered.com]
-match = -80.0%%
-title = Save 10%% on Men of War II on Steam
-url = https://store.steampowered.com/app/1128860/Men_of_War_II/
+match = -6.7%%
+title = No Man's Sky on Steam
+url = https://store.steampowered.com/app/275850/No_Mans_Sky/
 
 [www.swccd.edu]
 match = -166.7%%
