--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-05 16:30:26
+lastsearch = 2024-08-05 21:47:29
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -27,8 +27,8 @@ title = Ao Dai Xanh Mint
 url = https://www.etsy.com/market/ao_dai_xanh_mint
 
 [www.evergreenrecreation.com]
-match = -157.1%%
-title = ICE SKATING & HOCKEY | Evergreen Park and ...
+match = 0.0%%
+title = 
 url = https://www.evergreenrecreation.com/224/Ice-Skating-Hockey
 
 [www.bbc.com]
@@ -52,9 +52,9 @@ title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
 
 [www.youtube.com]
-match = -242.9%%
-title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
-url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
+match = -285.7%%
+title = BOVET 1822. Behind the Scenes with Pascal & Keith. 95%% in ...
+url = https://www.youtube.com/watch?v=T1H4IQneHZE
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -112,9 +112,9 @@ title = GREEN TEA - Uses, Side Effects, and More
 url = https://www.webmd.com/vitamins/ai/ingredientmono-960/green-tea
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Little green men
-url = https://en.wikipedia.org/wiki/Little_green_men
+match = 8.3%%
+title = Greenwashing
+url = https://en.wikipedia.org/wiki/Greenwashing
 
 [www.yeastdriven.com]
 match = -114.3%%
@@ -234,7 +234,7 @@ url = https://www.uscis.gov/forms/explore-my-options
 [bluebottlecoffee.com]
 match = -221.4%%
 title = Blue Bottle Coffee | Fresh Roasted Specialty Coffee
-url = https://bluebottlecoffee.com/?srsltid=AfmBOoqCzWswYnPbN4_4T2nMofwE7JufmEmxzJovEqpjg_0rrtxox3Jn
+url = https://bluebottlecoffee.com/
 
 [www.congress.gov]
 match = 9.1%%
@@ -262,9 +262,9 @@ title =
 url = https://www.google.com/search?sca_esv=9267af3241730e66&sca_upv=1&q=Who+owns+Blue+Bottle+Coffee?&sa=X&ved=2ahUKEwju1cLS6dWHAxWnFVkFHbh3BiAQsZYEegQISBAC
 
 [m.facebook.com]
-match = -128.6%%
-title = Blue Archive updated their cover photo.
-url = https://m.facebook.com/EN.BlueArchive/photos/d41d8cd9/510072298205897/
+match = -235.7%%
+title = Bored Panda - Dad leaves daughter high and dry after...
+url = https://m.facebook.com/story.php/?story_fbid=876152441214357&id=100064588278140
 
 [tpplayer-video-featured-snippets.googleusercontent.com]
 match = 0.0%%
