--- a/images/nem-sieu-nhe-5f-16/config.ini
+++ b/images/nem-sieu-nhe-5f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-5f-16.html
 lastopen = 2024-06-10 00:33:56
 
 [search]
-lastsearch = 2024-08-05 18:46:51
+lastsearch = 2024-08-05 21:33:41
 
 [shopee.vn]
 match = -161.1%%
@@ -47,9 +47,9 @@ title = Ăn gì ở Sài Gòn? 30 món ăn ngon Sài Gòn ngon khó cưỡng
 url = https://www.traveloka.com/vi-vn/explore/culinary/30-mon-an-ngon-sai-gon/58039
 
 [www.diepxuan.com]
-match = -7.7%%
-title = Điệp Xuân Nệm
-url = https://www.diepxuan.com/catalog/category/view/s/nem/id/773/
+match = 11.1%%
+title = Điệp Xuân Nệm siêu nhẹ
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
 match = 0.0%%
