--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-05 14:25:38
+lastsearch = 2024-08-05 21:44:21
 
 [www.amazon.com]
 match = -309.1%%
@@ -104,7 +104,7 @@ url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 [www.lazada.vn]
 match = -136.4%%
 title = Thảm Lót Ghế Sofa Da Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/
+url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/?srsltid=AfmBOorU4tSqTOhMpSWTCTR6U-swom_mg35f-O1iECDvE_vLDNMvu2i5
 
 [richhome.vn]
 match = -190.9%%
