--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-08-05 20:21:26
+lastsearch = 2024-08-05 21:31:19
 
 [shopee.vn]
-match = -52.4%%
-title = thảm trải giường giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm trải giường
+match = -90.5%%
+title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/thảm trải giường
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -23,8 +23,8 @@ url = https://www.sendo.vn/tham-chan-giuong.htm
 
 [tiki.vn]
 match = -38.1%%
-title = Tham trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham trải giường
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [flexhouse.vn]
 match = -42.9%%
@@ -37,9 +37,9 @@ title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
-match = -90.5%%
-title = Kích thước giường ngủ tiêu chuẩn, thông dụng nhất 2024
-url = https://comehome.com.vn/blog/post/kich-thuoc-giuong-ngu
+match = -119.0%%
+title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
+url = https://comehome.com.vn/blog/post/giuong-ngu-doi
 
 [www.kymdan.com]
 match = 14.3%%
