--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-08-05 16:46:33
+lastsearch = 2024-08-05 21:50:34
 
 [www.facebook.com]
 match = -45.0%%
 title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
-url = https://www.facebook.com/pyeoda.vn/photos/d41d8cd9/898284035635188/
+url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
 
 [demxanh.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
 url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
-match = -8.3%%
-title = ĐỆM THÀNH ĐÔ
-url = https://www.khodemthanhdo.com/
+match = -30.0%%
+title = Bộ chăn ga gối lụa pyeoda sky silk
+url = https://www.khodemthanhdo.com/products/bo-chan-ga-goi-lua-pyeoda-sky-silk
 
 [pyeoda.vn]
 match = -95.0%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Trang Chủ
 url = https://diepxuan.com/
 
 [demsingapore.com]
-match = -80.0%%
-title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 24
-url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.html
+match = -75.0%%
+title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 14
+url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-14.html
 
 [vuanem.com]
 match = -15.0%%
