--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-05 14:29:22
+lastsearch = 2024-08-05 21:51:37
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -25.0%%
-title = Tuyển Dụng Spa HCM | *** CẦN TUYỂN GẤP 05 KỸ ...
-url = https://m.facebook.com/groups/313116276409731/posts/1020387965682555/
+match = -71.4%%
+title = Việc làm spa uy tín ✅ | 👉500k,600k700k....../1lít serum ...
+url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
 
 [www.dkn.tv]
 match = -21.4%%
