CI images update

--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-05 20:56:41
+lastsearch = 2024-08-05 22:26:38
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -212,9 +212,9 @@ title = Double Mastectomy May Offer No Survival Benefit to ...
 url = https://www.mycouriertribune.com/lifestyles/health/double-mastectomy-may-offer-no-survival-benefit-to-women-with-breast-cancer/article_7531fbe7-8cdc-5efc-9ae3-eab8d5dc17da.html
 
 [arxiv.org]
-match = -73.7%%
-title = arXiv:2402.11952v1 [math-ph] 19 Feb 2024
-url = https://arxiv.org/pdf/2402.11952
+match = -110.5%%
+title = arXiv:2305.02340v2 [cond-mat.supr-con] 28 May 2024
+url = https://arxiv.org/pdf/2305.02340
 
 [www.grandrapidsmn.com]
 match = -142.1%%
@@ -245,4 +245,9 @@ url = https://www.parker.com/literature/Instrumentation Products Division Europe
 match = -136.8%%
 title = Automated Cell Detection and Morphometry on Growth ...
 url = https://www.scirp.org/journal/paperinformation?paperid=51047
+
+[www.reddit.com]
+match = -115.8%%
+title = Sono Bisque Doll wa Koi wo Suru - Chapter 105 ...
+url = https://www.reddit.com/r/SonoBisqueDoll/comments/1dvdpr5/sono_bisque_doll_wa_koi_wo_suru_chapter_105/
 
