--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-05 20:54:38
+lastsearch = 2024-08-05 22:14:31
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -57,9 +57,9 @@ title = Hotel inkl. Flug Südkorea - Pauschalreisen
 url = https://www.tui.com/pauschalreisen/suedkorea/
 
 [www.linkedin.com]
-match = -350.0%%
-title = We take travel to new heights: TUI launches holiday trips ...
-url = https://www.linkedin.com/posts/tuigroup_we-take-travel-to-new-heights-tui-launches-activity-7180438234118643713-PVeJ
+match = -200.0%%
+title = TUI
+url = https://www.linkedin.com/company/tuigroup
 
 [maritime-executive.com]
 match = -308.3%%
@@ -167,9 +167,9 @@ title = Korean Dham Doi (Tan Tui) Interpretation
 url = https://www.youtube.com/watch?v=9KjmM8FLEqE
 
 [www.thenaturaladventure.com]
-match = -283.3%%
-title = Camino Portugues Last 100km: Tui to Santiago in 8 Days
-url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-tui-to-santiago-in-8-days/
+match = -325.0%%
+title = Camino Portugues Last 100km Relaxed: Tui to Santiago in ...
+url = https://www.thenaturaladventure.com/tours/spain/camino-portugues-last-100km-relaxed-tui-to-santiago-in-11-days/
 
 [www.tripadvisor.com]
 match = -275.0%%
