--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-05 20:04:57
+lastsearch = 2024-08-05 22:29:05
 
 [changagoidemsonghong.com]
-match = -55.6%%
-title = HOme Collection - dòng chăn ga gối cotton nhập khẩu hiệu ...
-url = https://changagoidemsonghong.com/home-collection
+match = 37.0%%
+title = Chăn ga gối classic cotton mã C16-C38
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [demhong.vn]
 match = 11.1%%
