--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-08-05 18:48:55
+lastsearch = 2024-08-05 22:19:40
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html?srsltid=AfmBOoq-dfteWbfy9BqiZwA11vq7i5OwZC0D9_Ma-M-yuS1oNJhiZeIt
 
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html?srsltid=AfmBOorAbp5pZWQMnXrEX5gUQHS-nXCSr-XItonttOF6ds7qCSgNyIeM
 
 [uannga.vn]
 match = 56.5%%
