--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-05 20:08:08
+lastsearch = 2024-08-05 22:25:34
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title =
 url = https://www.doorloop.com/laws/arizona-hoa-laws
 
 [www.reddit.com]
-match = -82.4%%
-title = The HOA hates this man. : r/HamRadio
-url = https://www.reddit.com/r/HamRadio/comments/rn8gpx/the_hoa_hates_this_man/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [spectrumam.com]
 match = -76.5%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -217.6%%
-title = Married Man getting rizzed by a guy pretending to be a girl on ...
-url = https://www.tiktok.com/@youtubables/video/7398260410878610730
+match = -11.8%%
+title = HOA fined me for this #hoa
+url = https://www.tiktok.com/@koltindarley/video/7320370539850206507
 
 [www.steadily.com]
 match = 0.0%%
