--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-05 21:47:08
+lastsearch = 2024-08-05 22:15:30
 
 [ninhouse.vn]
-match = -161.5%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi
+match = -146.2%%
+title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [www.lamido.vn]
 match = 46.2%%
@@ -48,8 +48,8 @@ url = https://shopykhoa.com/ultrasheer-sieu-mong-vo-goi-mau-da-kin-ngon-sp101.ht
 
 [tiki.vn]
 match = -253.8%%
-title = Mua (Đẹp vô cùng) Áo gối ôm, vỏ gối ôm loại to mẫu Kẻ ...
-url = https://tiki.vn/dep-vo-cung-ao-goi-om-vo-goi-om-loai-to-mau-ke-den-bao-goi-dai-poly-cotton-30x100cm-loai-dep-p176866955.html?spid=176867980
+title = Ga Gối Cotton Tici Kẻ Mẫu Mới Nhất (01 Ga, 02 Vỏ Gối Nằm)
+url = https://tiki.vn/ga-goi-cotton-tici-ke-mau-moi-nhat-01-ga-02-vo-goi-nam-nhap-khau-khong-bai-xu-khong-phai-mau-p140019661.html
 
 [gonbedding.vn]
 match = -15.4%%
