--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-05 21:47:29
+lastsearch = 2024-08-05 22:46:23
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = -100.0%%
-title = Blue Eye Samurai (TV Series 2023)
-url = https://www.imdb.com/title/tt13309742/
+match = -7.1%%
+title = The Guardian (2006)
+url = https://www.imdb.com/title/tt0406816/
 
 [www.etsy.com]
 match = 35.7%%
@@ -52,9 +52,9 @@ title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
 
 [www.youtube.com]
-match = -285.7%%
-title = BOVET 1822. Behind the Scenes with Pascal & Keith. 95%% in ...
-url = https://www.youtube.com/watch?v=T1H4IQneHZE
+match = -242.9%%
+title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
+url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -312,9 +312,9 @@ title = Tổng hợp thông tin iPhone 16: Khi nào ra mắt và giá bao ...
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/tong-hop-thong-tin-iphone-16-khi-nao-ra-mat-gia-ban-bao-nhieu
 
 [www.tripadvisor.com]
-match = -221.4%%
-title = Noisy hotel! - Review of Dong Xanh Hotel, Chau Doc ...
-url = https://www.tripadvisor.com/ShowUserReviews-g311303-d9794497-r549078009-Dong_Xanh_Hotel-Chau_Doc_An_Giang_Province.html
+match = -242.9%%
+title = SÔNG BIÉN XANH, Hoi An - Restaurant Reviews, Photos & ...
+url = https://www.tripadvisor.com/Restaurant_Review-g298082-d25271727-Reviews-Song_Bien_Xanh-Hoi_An_Quang_Nam_Province.html
 
 [www.beyondblue.org.au]
 match = -257.1%%
