--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-05 17:29:59
+lastsearch = 2024-08-05 22:32:36
 
 [www.everonvn.vn]
-match = -95.2%%
-title = Bảng giá các kích thước ruột gối Everon Standard Soft
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-standard-soft.html
+match = 4.8%%
+title = Ruột gối thư giãn cổ Micro Relax
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-thu-gian-co-micro-relax.html
 
 [shopee.vn]
-match = -100.0%%
-title = Ruột gối hơi bông gòn cao cấp kháng khuẩn mẫu hoa nhí ...
-url = https://shopee.vn/Ruột-gối-hơi-bông-gòn-cao-cấp-kháng-khuẩn-mẫu-hoa-nhí-kích-thước-45x65cm-i.441837062.20823110424
+match = -66.7%%
+title = Gối lồng sẵn 45x65 hoa văn kẻ ruột mềm L2 CM
+url = https://shopee.vn/Gối-lồng-sẵn-45x65-hoa-văn-kẻ-ruột-mềm-L2-CM-i.435075614.17880906893
 
 [www.diepxuan.com]
 match = 4.8%%
