--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-05 21:01:07
+lastsearch = 2024-08-05 22:44:40
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
 url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v16
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
 match = -57.1%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -95.2%%
-title = [giá hủy diệt]Bộ ga gối bo chun bọc đệm,vải cotton poly ...
-url = https://shopee.vn/-giá-hủy-diệt-Bộ-ga-gối-bo-chun-bọc-đệm-vải-cotton-poly-chọn-nhiều-mẫu-sao-rơi--i.703206422.12382934312
+match = -66.7%%
+title = bộ chăn ga gối hè giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=bộ chăn ga gối hè
 
 [runa.vn]
 match = -23.8%%
