--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -32,8 +32,8 @@ title = Ga chống thấm cao cấp Everon
 url = https://www.everonvn.vn/chi-tiet/ga-chong-tham-cao-cap-everon.html
 
 [phuonghoangphat.com]
-match = -63.2%%
-title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= ...
+match = -84.2%%
+title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= 120k ...
 url = https://phuonghoangphat.com/ga-giuong-chinh-hang-le-home sz-1-5m-x-2m-120k-sz-1-8m-x-2m-135k-sz-2m2-x-2m-140k
 
 [suongtuyet.com]
