--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-05 20:04:33
+lastsearch = 2024-08-05 22:44:59
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -11.1%%
-title = Nem Nướng | Ho Chi Minh City
-url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
+match = -144.4%%
+title = Ăn vặt Vị Thanh - Hậu Giang | Nem nướng lụi siêu ngon
+url = https://www.facebook.com/groups/831435913920996/posts/nem-nướng-lụi-siêu-ngon110k500grcó-sẵn-nhé/2048288615569047/
 
 [thegioinem.com]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -77.8%%
-title = How Long to Cook Nem Nuong in Air Fryer
-url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -190,4 +190,9 @@ url = https://www.agoda.com/en-au/xo-xon-homestay/hotel/kon-tum-vn.html
 match = -22.2%%
 title = Cách làm nem nướng thơm ngon
 url = https://www.nguoi-viet.com/nvtv-doi-song/nvtv-nguoi-viet-bep-viet/nem-nuong/
+
+[www.sunrun.com]
+match = 0.0%%
+title = 
+url = https://www.sunrun.com/utility/ca/pge/how-read-your-pge-nem-bill
 
