CI images update

--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-05 22:37:10
+lastsearch = 2024-08-05 23:23:48
 
 [www.bible.com]
 match = -157.1%%
@@ -24,7 +24,7 @@ url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 [munghoangphat.com]
 match = -135.7%%
 title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [manthutrang.com]
 match = -228.6%%
@@ -72,9 +72,9 @@ title = Doktrin na ol Kavanen 78
 url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [www.youtube.com]
-match = -200.0%%
-title = Hướng Dẫn Gấp Màn Chụp Tự Bung - Cách Gấp Màn Chụp ...
-url = https://www.youtube.com/watch?v=AEddlekH6zA
+match = 28.6%%
+title = Thufingte bung 16 na
+url = https://www.youtube.com/watch?v=Lg0yXQBg_AI
 
 [www.instagram.com]
 match = -150.0%%
