--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-05 21:57:12
+lastsearch = 2024-08-05 23:18:13
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
 match = -338.5%%
@@ -710,4 +710,9 @@ url = http://www.historycolorado.org/story/seasonal/2022/12/16/habari-gani-or-wh
 match = -161.5%%
 title = long-term weather forecast Dar Gani Gund
 url = https://weather.interia.com/long-term-forecast-dar-gani-gund,cId,577169
+
+[tunighthawks.com]
+match = -300.0%%
+title = Women's Flag Football vs Ottawa University (Kan.) on 3/16/2024
+url = https://tunighthawks.com/sports/womens-flag-football/stats/2024/ottawa-university-kan-/boxscore/5765
 
