--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-08-05 19:36:03
+lastsearch = 2024-08-05 23:25:28
 
 [www.instagram.com]
 match = -105.6%%
@@ -14,7 +14,7 @@ url = https://www.instagram.com/farmersmarketvietnam/p/C8LpJbxM717/
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOoqeumDEMS9mxHUGM4FpGLahIUOVWuZleFSSiz-UqyGfM4F_4kWC
 
 [www.facebook.com]
 match = -11.1%%
@@ -39,22 +39,22 @@ url = https://www.proz.com/profile/2092720
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOop809SVdvUIfCWJM-Daqfygi4bUSFAHNzQxcefaXEY_ePEBBCkv
 
 [m.facebook.com]
-match = -11.1%%
-title = Nem Nướng added a new photo.
-url = https://m.facebook.com/100054522756775/photos/961532129007537/
+match = -161.1%%
+title = Quay lại NEM NƯỚNG ĐÀ LẠT - BÉ... - Địa điểm ăn uống ...
+url = https://m.facebook.com/story.php/?story_fbid=763585472473204&id=100064652743390
 
 [lanchi.vn]
-match = 16.7%%
-title = NEM CHUA HÀ THÀNH 200G
-url = https://lanchi.vn/san-pham/nem-chua-ha-thanh-200g/
+match = -38.9%%
+title = NƯỚC MẮM NAM NGƯ SIÊU TIẾT KIỆM 4.8L
+url = https://lanchi.vn/san-pham/nuoc-mam-nam-ngu-sieu-tiet-kiem-4-8l/
 
 [www.tiktok.com]
-match = -150.0%%
-title = Replying to @team_icespicee Nem gets out of jail TMRW ...
-url = https://www.tiktok.com/@thateapage123/video/7391278244290514206
+match = -166.7%%
+title = Nem Nướng Cô Lê - 16B ngõ 3 Ao Sen (35~70k) #tiktokfood ...
+url = https://www.tiktok.com/@eatwithmynoreo/video/7132782326672592155?lang=en
 
 [thuvienphapluat.vn]
 match = -133.3%%
