--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-05 22:34:01
+lastsearch = 2024-08-05 23:27:54
 
 [www.linkedin.com]
 match = -172.7%%
@@ -47,9 +47,9 @@ title = Donate | ONE TAM
 url = https://secure.parksconservancy.org/site/Donation2?df_id=3940&3940.donation=form1&pw_id=1861
 
 [ultrarunning.com]
-match = -63.6%%
-title = Ultra Running Calendar
-url = https://ultrarunning.com/calendar/?refinementList[distances.group][0]=26-40 mi.&refinementList[distances.group][1]=41-60 mi.&refinementList[month_name][0]=04Apr&refinementList[month_name][1]=12Dec&hitsPerPage=24&page=37
+match = -245.5%%
+title = Tam Nguyen Race Results - UltraRunning Magazine
+url = https://ultrarunning.com/calendar/runner/show?first_name=Tam&last_name=Nguyen&runner_id=120117
 
 [www.quora.com]
 match = -145.5%%
@@ -367,9 +367,9 @@ title = Trung tâm khám phá khoa học Quy Nhơn
 url = https://quynhonhotel.com/trung-tam-kham-pha-khoa-hoc-quy-nhon/
 
 [en.nhipcautamgiao.net]
-match = -309.1%%
-title = Cao Dai Class Taught at Kansas State University – USA
-url = http://en.nhipcautamgiao.net/caodaism/news-caodaism/cao-dai-class-taught-at--kansas-state-university---usa/
+match = -381.8%%
+title = Kansas State University and Oomoto Religion attended the ...
+url = http://en.nhipcautamgiao.net/caodaism/news-caodaism/kansas-state-university-and-oomoto-religion-attended-the-great-festival-commemorating-god---year-2023/
 
 [www.nguoi-viet.com]
 match = -9.1%%
