--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-05 16:32:58
+lastsearch = 2024-08-05 23:49:37
 
 [everon.com.vn]
 match = 14.8%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Everon EPM 22063
 url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = 18.9%%
-title = Bộ Chăn Ga Gối Everon SR04 Chính Hãng
-url = https://everon.online/products/bo-everon-sr04
+match = -5.0%%
+title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
+url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 27.0%%
-title = BỘ CHĂN GA GỐI MIỀN SA MẠC - EST24033
-url = https://www.everonvni.vn/bo-chan-ga-goi-mien-sa-mac-est24033/
+match = 29.7%%
+title = BỘ CHĂN GA GỐI GIẤC MƠ MÂY - ESJ24030
+url = https://www.everonvni.vn/bo-chan-ga-goi-giac-mo-may-esj24030/
 
 [everonhanquoc.vn]
 match = 19.4%%
@@ -52,9 +52,9 @@ title = Chăn Ga Gối Nệm | YESHOME BEDDING
 url = https://yeshomebedding.com/bo-chun-chan-everon-epm22063-co-men
 
 [tiki.vn]
-match = -2.5%%
-title = Bộ chăn ga peony everon 180x200cm ep-1827 hàng chính ...
-url = https://tiki.vn/search?q=bộ chăn ga peony everon 180x200cm ep-1827
+match = 7.5%%
+title = Chăn bốn mùa everon hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn bốn mùa everon
 
 [shopee.vn]
 match = 17.5%%
