--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-08-05 21:38:31
+lastsearch = 2024-08-05 23:47:09
 
 [demxanh.com]
-match = 51.7%%
-title = Chiếu điều hòa cao su non Tencel Ghi
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = 6.9%%
+title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html?srsltid=AfmBOorZqxXXCZU9dntbPIjTVxZYeVMTduasSFjePys618ac6DXacyVn
 
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307875
 
 [demchinhhang.com]
 match = 51.7%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 31.0%%
-title = Chiếu Điều Hòa Cao Su Non Dâu Thỏ Xám 160x200 ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-dau-tho-xam-160x200-180x200cm-phamuyen56-i1861397442.html
+match = -17.2%%
+title = chiếu điều hòa cao su non 5d mềm mịn thoáng mát hàng ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-5d-mem-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1916363851.html?srsltid=AfmBOopKLMTf-qfDstngQP3b_JkJVxqes-_9-7xFuO934rRDj2xaEe2Q
 
 [nanara.vn]
 match = 34.5%%
