--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-05 22:22:25
+lastsearch = 2024-08-05 23:45:29
 
 [demre.com.vn]
-match = 76.0%%
-title = Chiếu nhựa cao cấp 180x200
-url = https://demre.com.vn/chieu-nhua-cao-cap-180x200
+match = 61.1%%
+title = Chiếu nhựa 160x200
+url = https://demre.com.vn/chieu-nhua-160x200
 
 [www.facebook.com]
 match = 42.1%%
@@ -34,12 +34,12 @@ url = https://www.lazada.vn/tag/chieu-nhua-gap-doi/?page=2
 [www.diepxuan.com]
 match = 20.0%%
 title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html?srsltid=AfmBOoqQwassBGnr4SZmQDMcbYJjt3yr1Z4zAt6vrF47CeLs5ZoLqTr-
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOoqR3BtiToRhYbANvmqklBx9Kzs-N8sOfqJ-n4rpdgQK-DrpdSwD
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [shopee.vn]
 match = 36.0%%
