--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-05 18:23:52
+lastsearch = 2024-08-05 23:47:52
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
+match = -17.4%%
+title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
+url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [www.facebook.com]
 match = 52.2%%
@@ -17,14 +17,14 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = -69.6%%
-title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
-url = https://www.sendo.vn/chieu-coi-thai-binh.htm
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [trangvangvietnam.com]
-match = -87.0%%
-title = chiếu nhựa, chiếu cói, chiếu tre, chiếu trúc ở tại Thái Bình
-url = https://trangvangvietnam.com/cateprovinces/490435/chiếu-nhựa,-chiếu-cói,-chiếu-tre,-chiếu-trúc-ở-tại-Thái-Bình.html
+match = 21.7%%
+title = Cơ Sở Sản Xuất Chiếu Thái Bình
+url = https://trangvangvietnam.com/listings/1187701263/co-so-san-xuat-chieu-thai-binh.html
 
 [www.yellowpages.vn]
 match = 15.8%%
