--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-05 18:39:08
+lastsearch = 2024-08-05 23:46:50
 
 [www.gov.uk]
 match = 0.0%%
@@ -807,9 +807,9 @@ title = 16Personalities: Free personality test, type descriptions ...
 url = https://www.16personalities.com/
 
 [humane.com]
-match = -60.0%%
-title = Ai Pin - Wearable Ai | Humane
-url = https://humane.com/
+match = 0.0%%
+title = 
+url = https://humane.com/shop
 
 [www.wrdw.com]
 match = -250.0%%
