--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-05 23:23:48
+lastsearch = 2024-08-05 23:43:04
 
 [www.bible.com]
-match = -157.1%%
-title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -22,14 +22,14 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -135.7%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+match = -21.4%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [manthutrang.com]
-match = -228.6%%
-title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
-url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
+match = -207.1%%
+title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
+url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
 
 [easydream.vn]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Màn chụp tự bung Gia Long 16x18x2cm - Loại 2 cửa
 url = https://boba.vn/man-chup-tu-bung-nguoi-lon/man-chup-tu-bung-gia-long-1-6-1-8x-2m-loai-2-cua
 
 [shopee.vn]
-match = -128.6%%
-title = màn chụp giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp
+match = -178.6%%
+title = Màn chụp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/màn chụp
 
 [text.egwwritings.org]
 match = -78.6%%
