--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-05 20:06:03
+lastsearch = 2024-08-05 23:50:16
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -133.3%%
-title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
-url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
+match = -161.1%%
+title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
 match = -150.0%%
@@ -33,8 +33,8 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 
 [www.diepxuan.com]
 match = -11.1%%
-title = Vỏ gối EPM20065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
+title = Vỏ gối EPM21065 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-epm21065-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
@@ -70,4 +70,9 @@ url = https://www.instagram.com/vdbears/p/C17lcL4okSP/
 match = -88.9%%
 title = Bộ chăn ga gối hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=bộ chăn ga gối
+
+[www.tiktok.com]
+match = -172.2%%
+title = Bearly keeping it together 🐻 #bears #bear #sleeping #paw ...
+url = https://www.tiktok.com/@rufusisagoodboy/video/7399420735707417898
 
