--- a/images/vo-goi-dreamland-50x70-tr/config.ini
+++ b/images/vo-goi-dreamland-50x70-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-dreamland-50x70-tr.html
 lastopen = 2024-06-07 00:26:33
 
 [search]
-lastsearch = 2024-08-05 22:38:13
+lastsearch = 2024-08-05 23:38:49
 
 [furlife.vn]
 match = 70.8%%
@@ -13,8 +13,8 @@ url = https://furlife.vn/vo-goi-dreamland-tr-18.p100015384455.html
 
 [www.furlife.vn]
 match = 70.8%%
-title = Vỏ Gối Dreamland - TR 07
-url = https://www.furlife.vn/vo-goi-dreamland-tr-07.p100006649916.html
+title = Vỏ Gối Dreamland - TR 04
+url = https://www.furlife.vn/vo-goi-dreamland-tr-04.p100006649925.html
 
 [www.diepxuan.com]
 match = 56.0%%
@@ -42,9 +42,9 @@ title = tvpoggibonsi
 url = http://www.poggibonsifacile.it/servicepage.php?titolo=tvpoggibonsi&link=xn--b1af6ak5a2c.xn--p1ai/43561893zwfe43a
 
 [www.museum.ru]
-match = -124.0%%
-title = Narragansett rune stone wiki 3 nature of computer God bless the ...
-url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://biotrans-opt.ru/vVjg6Xwfe43v
+match = -108.0%%
+title = bruno manser freundin: Mahadbt portal yojana Voldsom kritikk ...
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://dwtao.ru/1ikDfsafe
 
 [rerecord.library.columbia.edu]
 match = -17.6%%
