CI images update

--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-05 16:59:20
+lastsearch = 2024-08-05 23:59:51
 
 [shopee.vn]
 match = -36.8%%
@@ -230,4 +230,9 @@ url = https://olm.vn/cau-hoi/viet-bai-van-ke-lai-cuoc-tro-chuyen-cua-buc-tuong-m
 match = -94.7%%
 title = Phan Phú Hiệp - BEAUTIFUL SUNDAY - BÀI MỚI NHẤT
 url = https://www.ngo-quyen.org/p3590a7934/22/beautiful-sunday
+
+[nemsaithanh.com]
+match = -10.0%%
+title = Chiếu Trúc
+url = https://nemsaithanh.com/san-pham/chieu-truc-135.html
 
