--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-05 22:22:46
+lastsearch = 2024-08-05 23:55:23
 
 [demxanh.com]
-match = 3.4%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 0.0%%
+title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
+url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html
 
 [entershopping.vn]
 match = 3.4%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
 url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [thegioichieutruc.com]
-match = -34.5%%
-title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
+match = 51.7%%
+title = Chiếu điều hòa cao su non Tencel ghi
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-ghi/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -27,9 +27,9 @@ title = [RẺ NHẤT] Chiều điều hòa cao su non Latex mẫu mới siêu ..
 url = https://demchinhhang.com/collections/chieu-dieu-hoa-cao-su-non
 
 [changagoidemdep.vn]
-match = -27.6%%
-title = Chiếu điều hòa cao su non Tencel Xanh nhạt - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+match = -10.3%%
+title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
 [khodem.vn]
 match = 55.2%%
