--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-05 21:32:59
+lastsearch = 2024-08-05 23:50:49
 
 [shopee.vn]
 match = 19.4%%
@@ -14,17 +14,17 @@ url = https://shopee.vn/phuong97tb
 [tiki.vn]
 match = 48.4%%
 title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
-url = https://tiki.vn/chieu-nhua-thai-binh-ben-dep-du-co-1m6-x-2ml-p182155456.html?spid=182155476
+url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p182155456.html?spid=182155480
 
 [www.diepxuan.com]
 match = 58.1%%
-title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
+title = Chiếu nhựa Thái Bình GT 180x300 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x300.html
 
 [m.facebook.com]
-match = 9.7%%
-title = Hội Sales Quảng Bình 73 | Chào cả nhà
-url = https://m.facebook.com/groups/251202215303340/posts/858519194571636/
+match = -6.5%%
+title = SANG NHƯỢNG + MUA BÁN TIỆM QUÁN Ở CHLB ĐỨC
+url = https://m.facebook.com/groups/1110093975748337/posts/7873087172782283/
 
 [trangvangvietnam.com]
 match = 20.0%%
