--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-05 12:44:05
+lastsearch = 2024-08-05 23:53:13
 
 [quizlet.com]
 match = -170.0%%
@@ -117,9 +117,9 @@ title = Georgia Renaissance Festival: Celebrating 39 Years of Cheers!
 url = https://www.garenfest.com/
 
 [www.reddit.com]
-match = -460.0%%
-title = What is your best "Ren is the type of guy to..."? : r/Persona5
-url = https://www.reddit.com/r/Persona5/comments/15xugqf/what_is_your_best_ren_is_the_type_of_guy_to/
+match = -310.0%%
+title = 8:34 - "I'm really getting into this guy Ren..."
+url = https://www.reddit.com/r/ren/comments/1dg1e29/834_im_really_getting_into_this_guy_ren/
 
 [cca.hawaii.gov]
 match = -120.0%%
@@ -315,4 +315,14 @@ url = https://oxenfree.fandom.com/wiki/Ren
 match = 0.0%%
 title = 
 url = https://yinyanghouse.com/theory/acupuncturepoints/cv16/
+
+[dartmouthsports.com]
+match = -220.0%%
+title = Henry Ren (10/10/2023) - Athlete Awards
+url = https://dartmouthsports.com/awards.aspx?aow=4353
+
+[aueagles.com]
+match = -450.0%%
+title = Clarissa Ren - 2013-14 - Track and Field - American University
+url = https://aueagles.com/sports/track-and-field/roster/clarissa-ren/586
 
