--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-05 21:00:29
+lastsearch = 2024-08-05 23:59:08
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -82.6%%
-title = Kog'Maw means sweet potato in Korean (고구마). Any ...
-url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
+match = -87.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
@@ -32,9 +32,9 @@ title = Korean Embassy in South Africa 주남아공한국대사관
 url = https://www.facebook.com/KoreanEmbassySouthAfrica/
 
 [www.cia.gov]
-match = -82.6%%
-title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
-url = https://www.cia.gov/readingroom/document/06638269
+match = -30.4%%
+title = n. korean patrol boats se[15489169].pdf
+url = https://www.cia.gov/readingroom/docs/n. korean patrol boats se[15489169].pdf
 
 [journal.transformativeworks.org]
 match = -91.3%%
@@ -122,9 +122,9 @@ title = EBB and Flow, November 1950-July 1951 - DTIC
 url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
 
 [www.tiktok.com]
-match = -17.4%%
-title = 🍇🍍sour fruit taste test 🍍🍇 | fruit riot
-url = https://www.tiktok.com/@moribyan/video/7358572537074257198?lang=en
+match = -104.3%%
+title = Teaching Korean basics to @Nisqy I hope it helps 😈 @SK ...
+url = https://www.tiktok.com/@laurebuliiv/video/7378201658527911176
 
 [30rates.com]
 match = -52.2%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [www.usmcu.edu]
 match = -104.3%%
