CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-05 23:42:20
+lastsearch = 2024-08-06 00:15:12
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -875,4 +875,9 @@ url = https://baohagiang.vn/xa-hoi/202408/cong-bo-diem-chuan-trung-tuyen-dai-hoc
 match = -231.2%%
 title = Nhiều xe máy "lạc lối" trên Đại lộ Thăng Long, tẩu thoát bất ...
 url = https://atgt.baogiaothong.vn/nhieu-xe-may-lac-loi-tren-dai-lo-thang-long-tau-thoat-bat-thanh-khi-gap-csgt-192240805153453176.htm
+
+[congly.vn]
+match = -187.5%%
+title = Giá vàng hôm nay 5/8: Lạc quan vào đà tăng của giá vàng
+url = https://congly.vn/gia-vang-hom-nay-5-8-lac-quan-vao-da-tang-cua-gia-vang-443028.html
 
