--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-05 21:38:09
+lastsearch = 2024-08-06 00:13:06
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -497,8 +497,8 @@ title = Miss Cosmo added a new photo — at Thung Nham...
 url = https://m.facebook.com/100070582791098/photos/528788106150611/
 
 [www.seascanner.com]
-match = 8.3%%
-title = TUI Cruise Deals
+match = -25.0%%
+title = TUI Cruises 2022-2023
 url = https://www.seascanner.com/tui-cruises
 
 [www.datacenterdynamics.com]
