--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-08-05 20:58:01
+lastsearch = 2024-08-06 00:12:03
 
 [www.everonvn.vn]
-match = 34.5%%
-title = Ruột gối thư giãn cổ Micro Relax
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-thu-gian-co-micro-relax.html
+match = 68.0%%
+title = Ruột gối Everon Lite thấp
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-lite.html
 
 [happynest.vn]
 match = 3.4%%
@@ -39,7 +39,7 @@ url = https://thegioichanra.com/san-pham/ruot-goi-nam-standard-everon-kich-thuoc
 [everon.com.vn]
 match = 48.3%%
 title = RUỘT GỐI EVERON STANDARD SOFT
-url = https://everon.com.vn/ruot-goi-standard-soft/?srsltid=AfmBOopgPn07vgS-8xXZS1pMYBBI99eS6hCACfq4rYugwfg2r7Vuevn9
+url = https://everon.com.vn/ruot-goi-standard-soft/
 
 [suongtuyet.com]
 match = 24.1%%
