--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-05 23:50:16
+lastsearch = 2024-08-06 00:23:57
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -133.3%%
+title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
+url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -33,8 +33,8 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 
 [www.diepxuan.com]
 match = -11.1%%
-title = Vỏ gối EPM21065 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-epm21065-45x65.html
+title = Vỏ gối EPM20065 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
