CI images update

--- a/images/nem-dreamland-uc-200x220x09/config.ini
+++ b/images/nem-dreamland-uc-200x220x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-200x220x09.html
 lastopen = 2024-06-07 01:35:05
 
 [search]
-lastsearch = 2024-08-05 23:52:11
+lastsearch = 2024-08-06 00:36:56
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -60,4 +60,14 @@ url = https://rennlist.com/forums/996-forum/1398850-ln-engineering-no-longer-rec
 match = -11.1%%
 title = Problem ECN2 development : r/Darkroom
 url = https://www.reddit.com/r/Darkroom/comments/105zc5o/problem_ecn2_development/
+
+[nem-hydraulics.com]
+match = -77.8%%
+title = ... for mobile hydraulic applications Cartridge Valves ...
+url = https://nem-hydraulics.com/dist/catalogs/catalog_cartridgeValves.pdf
+
+[www.electro-wind.com]
+match = 0.0%%
+title = DuPont Nomex Products (35)
+url = https://www.electro-wind.com/wpgrp-dupont-nomex-products/l/wcolr-white/suppliers-von-roll-usa/suppliers-von-roll-usa
 
