--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-05 23:35:41
+lastsearch = 2024-08-06 00:46:44
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = -17.9%%
-title = Trẻ bị vàng da chiếu đèn như nào mới hiệu quả?
-url = https://www.vinmec.com/vie/bai-viet/tre-bi-vang-da-chieu-den-nhu-nao-moi-hieu-qua-vi
+match = 0.0%%
+title = Chiếu đèn vàng da 15 phút có hiệu quả không?
+url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi/
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -102,9 +102,9 @@ title = PHIẾU AN TOÀN HÓA CHẤT
 url = https://www.merckmillipore.com/Web-CN-Site/en_US/-/CNY/ShowDocument-File?ProductSKU=MDA_CHEM-105833&DocumentType=MSD&DocumentId=105833_SDS_VN_VI.PDF&DocumentUID=16680141&Language=VI&Country=VN&Origin=null
 
 [www.facebook.com]
-match = -35.7%%
-title = Nội thất nhựa đài loan thành phong | Ho Chi Minh City
-url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/?locale=gn_PY
+match = -46.4%%
+title = Nhà Thuốc Đông Y Gia Truyền Chuyên Chữa Bệnh Ngoài ...
+url = https://www.facebook.com/NhaThuocDongYGiaTruyen15HangCot/?locale=vi_VN
 
 [www.favri.org.vn]
 match = -10.7%%
