--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-08-05 15:27:34
+lastsearch = 2024-08-06 00:33:47
 
 [demxanh.com]
-match = 16.7%%
-title = Chiếu điều hòa Nhật Bản Nekio Viscose màu xanh
-url = https://demxanh.com/chieu-dieu-hoa-nhat-ban-nekio-viscose-mau-xanh.html
+match = -3.3%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [suongtuyet.com]
 match = -13.3%%
@@ -63,8 +63,8 @@ url = http://anhp.vn/chieu-dieu-hoa--hieu-chuan-de-rut-tien-dung-d18928.html
 
 [thegioinem.com]
 match = 16.7%%
-title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
-url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
+title = Chiếu điều hòa cao su non là gì? Nên mua không?
+url = https://thegioinem.com/chieu-dieu-hoa-cao-su-non.html
 
 [xn--nekiovitnam-y69e.vn]
 match = 3.3%%
@@ -87,9 +87,9 @@ title = Chiếu điều hòa: Bóc mẽ sự thật
 url = https://shoptretho.com.vn/tin-tuc/chieu-dieu-hoa-boc-me-su-that
 
 [www.youtube.com]
-match = -23.3%%
-title = Review chiếu điều hòa cao su non và vài món mua trên Sốp ...
-url = https://www.youtube.com/watch?v=1UjrRLNjJ7o
+match = -30.0%%
+title = SỰ THẬT| Chiếu điều hòa tencel - Chiếu cao su non có mát ...
+url = https://www.youtube.com/watch?v=OShfCNiOmA8
 
 [vtvhyundai.vn]
 match = -6.7%%
