--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-05 23:34:58
+lastsearch = 2024-08-06 00:33:03
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -14,7 +14,7 @@ url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 [demxanh.com]
 match = 29.8%%
 title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html?srsltid=AfmBOoq6kR73hqZLo9xoYEl6KRBZzWLQ64O6et5EjrCfn1rnhgbgmUlO
+url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -29,7 +29,7 @@ url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 [everon.com.vn]
 match = 23.4%%
 title = ĐỆM LÒ XO KINGKOIL (MỸ) Showroom Chăn Ga Gối đệm ...
-url = https://everon.com.vn/kingkoil/?srsltid=AfmBOorRNYu9qNGLQtS3FZwxzMSNhVbkJSUliyZavxrgjDdzmGdsT8GW
+url = https://everon.com.vn/kingkoil/
 
 [sieuthidemhanquoc.com.vn]
 match = 33.3%%
@@ -49,7 +49,7 @@ url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.h
 [www.diepxuan.com]
 match = 53.2%%
 title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html?srsltid=AfmBOooJ6_bljCA688CrdJDpezqtAw3ziTn8eTRk9Dklg6iU7lUXTone
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everon.online]
 match = 25.5%%
