--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-05 23:17:12
+lastsearch = 2024-08-06 00:48:16
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = 18.2%%
+title = Thảm trải giường lông cừu TLC 04
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html?srsltid=AfmBOop5w_NIqZaDhXJK1GHK9HY56srQeSTbjugnPSRG_i1-I3nly2ee
 
 [demre.com.vn]
-match = 75.0%%
-title = Thảm lông xù 150x190
-url = https://demre.com.vn/tham-long-xu-150x190-2
+match = 18.2%%
+title = Thảm ghế thảm giường - Trang 3
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=3
 
 [decoviet.vn]
-match = 22.2%%
-title = Thảm Sofa Biên Hòa
-url = https://decoviet.vn/tham-sofa-bien-hoa/
+match = 23.8%%
+title = Thảm Sofa Phòng Khách
+url = https://decoviet.vn/tham-phong-khach/
 
 [demolympia.com]
 match = -40.9%%
@@ -34,7 +34,7 @@ url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOooJjN_s7-xWWqqiduUnfAgLZHeLhqYzYBq5DlvOsRp7qXMaSo25
 
 [flexhouse.vn]
 match = -90.9%%
@@ -44,7 +44,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html?srsltid=AfmBOoqzmtGPebXRNG1wQPkQJGKneNleB8bf-HFNqu4Vlg_QYRzEUSJE
 
 [www.lazada.vn]
 match = -77.3%%
