CI images update

--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-05 18:48:34
+lastsearch = 2024-08-06 00:52:42
 
 [xoptraisan.info]
 match = -64.7%%
@@ -187,9 +187,9 @@ title = Lhagang Choyu Wordlist with the Thamkhas Dialect of ...
 url = https://core.ac.uk/download/pdf/154886317.pdf
 
 [m.facebook.com]
-match = -117.6%%
-title = THẢM XỐP TRẢI SÀN - xốp ghép vân khế Tường Lâm, ...
-url = https://m.facebook.com/xoplotsan/photos/xốp-ghép-vân-khế-tường-lâm-bịch-8-tấm-mỗi-tấm-60-x-60cm-khoảng-288m21bi/724212804350897/
+match = -158.8%%
+title = THẢM XỐP TRẢI SÀN - Thảm xốp nỉ kẻ Âu Lạc bịch 10 tấm ...
+url = https://m.facebook.com/xoplotsan/photos/thảm-xốp-nỉ-kẻ-âu-lạc-bịch-10-tấm-mỗi-tấm-kích-thước-60-x-60cm-khoản/724213377684173/
 
 [citydocs.cityoforange.org]
 match = -194.1%%
