--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-06 17:08:27
 lastsearch = 2024-08-06 00:39:42
 
 [everonvn.com.vn]
-match = -74.1%%
-title = Bảng giá bán bộ chăn ga gối Hàn Quốc Everon Epc-19041 in ...
-url = https://everonvn.com.vn/everon/750/bo-everon-epc-19041
+match = -66.7%%
+title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Est-19032 ...
+url = https://everonvn.com.vn/everon/742/bo-everon-est19032
 
 [everon.com.vn]
 match = 40.0%%
