--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-05 23:26:51
+lastsearch = 2024-08-06 00:55:26
 
 [shopee.vn]
 match = -162.5%%
@@ -17,9 +17,9 @@ title = Hoi Chan (@hoichandraws) • Instagram photos and videos
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
-match = 28.6%%
-title = Con rùa vũ trụ
-url = https://vi.wikipedia.org/wiki/Con_rùa_vũ_trụ
+match = -75.0%%
+title = Rùa Hoàn Kiếm – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Rùa_Hoàn_Kiếm
 
 [tuongdamynghe.com]
 match = 6.2%%
@@ -107,8 +107,8 @@ title = Micro mai rùa đa hướng Shure MX393/S
 url = https://tca.vn/micro-mai-rua-da-huong-shure-mx393-s/
 
 [trungtamthuocdantoc.com]
-match = -175.0%%
-title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị ...
+match = -187.5%%
+title = Mai Rùa (Quy Bản) - Công Dụng và Cách Dùng Của Vị Thuốc
 url = https://trungtamthuocdantoc.com/duoc-lieu/mai-rua
 
 [medcare.com.vn]
