--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-08-05 22:19:40
+lastsearch = 2024-08-06 01:00:24
 
 [demxanh.com]
 match = -39.1%%
 title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html?srsltid=AfmBOoq-dfteWbfy9BqiZwA11vq7i5OwZC0D9_Ma-M-yuS1oNJhiZeIt
+url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [www.diepxuan.com]
-match = 21.7%%
-title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html?srsltid=AfmBOorAbp5pZWQMnXrEX5gUQHS-nXCSr-XItonttOF6ds7qCSgNyIeM
+match = 26.1%%
+title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
 
 [uannga.vn]
 match = 56.5%%
@@ -23,8 +23,8 @@ url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.ht
 
 [shopee.vn]
 match = -69.6%%
-title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
-url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
+title = Chiếu Trúc Cao Bằng-Tây Bắc-Chiếu Trúc Tăm chất lượng ...
+url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Tây-Bắc-Chiếu-Trúc-Tăm-chất-lượng-cao-1-2x1-9m-i.158114102.5532697972
 
 [chuyenhangviet.com]
 match = -43.5%%
