--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-06 00:15:12
+lastsearch = 2024-08-06 00:46:45
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Trẻ 8 tháng tuổi: Phát triển thể chất, vận động, nhận
 url = https://www.vinmec.com/vie/bai-viet/tre-8-thang-tuoi-phat-trien-chat-van-dong-nhan-thuc-va-cam-xuc-vi/
 
 [www.google.com]
-match = -200.0%%
-title = https://www.google.com/maps/@21.0506866,105.804746...
-url = https://www.google.com/maps/@21.0506866,105.8047464,19z?hl=vi
+match = -112.5%%
+title = maps/@21.001139,105.847882,17z?hl=vi
+url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [thongtindoingoai.caobang.gov.vn]
 match = -212.5%%
@@ -102,9 +102,9 @@ title = mibetel hct 40mg|Casino Online Châu Á: Đánh Thức Mọi ...
 url = https://tuyensinh.epu.edu.vn/xiazai/mibetel-hct-40mg.phtm
 
 [chuthapdotphcm.org.vn]
-match = -187.5%%
-title = Lớp Sơ cấp cứu cơ bản Khóa 13, ngày 03/8/2024 (thứ bảy)
-url = https://chuthapdotphcm.org.vn/tin-tuc/thong-bao-chieu-sinh-lop-so-cap-cuu
+match = -156.2%%
+title = Hội Chữ thập đỏ Thành phố Hồ Chí Minh | Trang chủ
+url = https://chuthapdotphcm.org.vn/
 
 [bandantoc.soctrang.gov.vn]
 match = -218.8%%
@@ -342,9 +342,9 @@ title = Phó Chủ tịch HĐND tỉnh làm Phó Chủ tịch UBND tỉnh Sóc .
 url = https://laodong.vn/thoi-su/pho-chu-tich-hdnd-tinh-lam-pho-chu-tich-ubnd-tinh-soc-trang-1356938.ldo
 
 [vtv.vn]
-match = -50.0%%
-title = Lịch phát sóng chương trình VTV
-url = https://vtv.vn/lich-phat-song.htm
+match = -31.2%%
+title = Bitcoin thủng mốc 50.000 USD
+url = https://vtv.vn/kinh-te/bitcoin-thung-moc-50000-usd-20240805170446475.htm
 
 [vnexpress.net]
 match = -118.8%%
@@ -572,9 +572,9 @@ title = Tình hình kinh tế - xã hội 6 tháng đầu nãm 2024 tỉnh Bình
 url = https://cucthongke.binhdinh.gov.vn/vi/news/tinh-hinh-kinh-te-xa-hoi/tinh-hinh-kinh-te-xa-hoi-6-thang-dau-nam-2024-tinh-binh-dinh-440.html
 
 [caobangtv.vn]
-match = -168.8%%
-title = Huyện Bảo Lạc thăm, tặng quà các gia đình chính sách
-url = http://caobangtv.vn/tin-tuc-n75384/huyen-bao-lac-tham-tang-qua-cac-gia-dinh-chinh-sach.html
+match = -193.8%%
+title = Đại biểu HĐND huyện Bảo Lạc tiếp xúc cử tri xã Thượng ...
+url = http://caobangtv.vn/tin-tuc-n75927/dai-bieu-hdnd-huyen-bao-lac-tiep-xuc-cu-tri-xa-thuong-ha-co-ba.html
 
 [fecredit.com.vn]
 match = -62.5%%
@@ -880,4 +880,9 @@ url = https://atgt.baogiaothong.vn/nhieu-xe-may-lac-loi-tren-dai-lo-thang-long-t
 match = -187.5%%
 title = Giá vàng hôm nay 5/8: Lạc quan vào đà tăng của giá vàng
 url = https://congly.vn/gia-vang-hom-nay-5-8-lac-quan-vao-da-tang-cua-gia-vang-443028.html
+
+[nghixuan.hatinh.gov.vn]
+match = -206.2%%
+title = HĐND Xuân Mỹ bàn giải pháp phát triển KT-XH 6 tháng ...
+url = https://nghixuan.hatinh.gov.vn/chinh-tri/hdnd-xuan-my-ban-giai-phap-phat-trien-kt-xh-6-thang-cuoi-nam.html
 
