--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-05 23:45:16
+lastsearch = 2024-08-06 00:56:08
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -434,7 +434,7 @@ url = https://hanoionline.vn/mang-luoi-14-tuyen-duong-sat-do-thi-phu-khap-ha-noi
 [thaibinhjmp.vn]
 match = -268.8%%
 title = Bài 14: Đánh giá kết quả điều trị lệch lạc khớp cắn loại II sử dụng ...
-url = https://thaibinhjmp.vn/index.php/ojstbump/article/view/186?articlesBySameAuthorPage=10
+url = https://thaibinhjmp.vn/index.php/ojstbump/article/view/186?articlesBySameAuthorPage=26
 
 [bvtrungvuong.vn]
 match = -6.2%%
@@ -480,4 +480,9 @@ url = https://www.cgv.vn/default/lat-mat-7.html
 match = -87.5%%
 title = Chiếu cói sọc | 1m x 2m - Chiếu Hiệp Thành
 url = http://chieulongdinh.com.vn/vi/san-pham/9/chieu-coi-soc-1m-x-2m.html
+
+[hunglien.net]
+match = 37.5%%
+title = Chiếu lạc - Hưng Liên
+url = http://hunglien.net/san-pham/chieu-lac/
 
