--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-08-05 23:31:17
+lastsearch = 2024-08-06 00:54:44
 
 [nemgiakho.com]
 match = 8.6%%
@@ -32,9 +32,9 @@ title = Nệm Liên Á - Mua Nệm Online Giảm Giá Lớn
 url = https://www.thegioinem.vn/vn/product/brand/nem-lien-a-15.html
 
 [demxanh.com]
-match = 11.4%%
-title = [Hot] Bảng giá nệm cao su Liên Á khuyến mãi 2024
-url = https://demxanh.com/bang-gia-nem-cao-su-lien-a-2018.html
+match = 57.1%%
+title = Đệm cao su Liên Á Classic (dày 5cm, 10cm)
+url = https://demxanh.com/dem-cao-su-lien-a-classic.html
 
 [demcaosuliena.com]
 match = 48.0%%
