--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-05 22:32:57
+lastsearch = 2024-08-06 00:46:01
 
 [www.lazada.vn]
 match = -105.6%%
@@ -22,9 +22,9 @@ title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
 url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -155.6%%
+title = TOP 12 thương hiệu nệm cao su khuyến mãi, giá rẻ tại ...
+url = https://thegioinem.com/top-12-thuong-hieu-nem-cao-su-khuyen-mai-gia-re-tai-thegioinem-com.html
 
 [www.facebook.com]
 match = -155.6%%
@@ -37,9 +37,9 @@ title = 9X gói nem 10 cái đẹp như 10 nhờ mẹo cực hay, trữ đông .
 url = https://eva.vn/bep-eva/9x-goi-nem-10-cai-dep-nhu-10-nho-meo-cuc-hay-tru-dong-nem-de-lau-van-ngon-c162a501885.html
 
 [www.tiktok.com]
-match = -188.9%%
-title = let me cater to you with these easy nem nuong spring rolls ...
-url = https://www.tiktok.com/@marylantran/video/7303621361979755822?lang=en
+match = -77.8%%
+title = How Long to Cook Nem Nuong in Air Fryer
+url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 
 [www.youtube.com]
 match = -150.0%%
