--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -7,8 +7,8 @@ lastopen = 2024-06-10 00:08:10
 lastsearch = 2024-08-06 00:47:29
 
 [demxanh.com]
-match = -84.2%%
-title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống ...
+match = -131.6%%
+title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
 url = https://demxanh.com/tam-trang-tri-khach-san.html
 
 [thegioidemviet.vn]
