--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-05 23:52:52
+lastsearch = 2024-08-06 00:50:36
 
 [www.diepxuan.com]
 match = -31.2%%
 title = Túi Warmdream 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+url = https://www.diepxuan.com/tui-warmdream-180x200x09.html?srsltid=AfmBOopDJ5MIjbCZH4gieYchWgXe4h-zPgo2p7M-Ls9wsmVnhY1ZFCaK
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -31.2%%
-title = Huda Beauty Best Lip Liner
-url = https://www.tiktok.com/discover/huda-beauty-best-lip-liner
+match = -200.0%%
+title = Reveal time #beautytok #xyzba #hudabeauty #lip @Huda ...
+url = https://www.tiktok.com/@hudabeauty/video/7343308327729761582
 
 [archiveofourown.org]
 match = -137.5%%
