CI images update

--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-06 00:39:20
+lastsearch = 2024-08-06 01:51:08
 
 [demxanh.com]
-match = 0.0%%
-title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
-url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html?srsltid=AfmBOopOqncFpoY-lfti6SFDFRG_pAhBEnqiMCaaG5_TYenOyHxVSNXZ
+match = 3.4%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [entershopping.vn]
-match = 3.4%%
-title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
+match = -13.8%%
+title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
 
 [thegioichieutruc.com]
-match = 51.7%%
-title = Chiếu điều hòa cao su non Tencel ghi
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-ghi/
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel cam đất chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-cam-dat/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -55,4 +55,9 @@ url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.ht
 match = -27.6%%
 title = Chiếu điều hoà cao su non in hình 5D siêu mát tặng kèm 2 ...
 url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-in-hình-5D-siêu-mát-tặng-kèm-2-vỏ-gối-i.547721201.15020384769
+
+[suongtuyet.com]
+match = 72.4%%
+title = Chiếu Điều Hòa Cao Su Non - 001
+url = https://suongtuyet.com/chieu-dieu-hoa-cao-su-non-001
 
