--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -29,7 +29,7 @@ url = https://demxanh.com/da-i-ly-ba-n-dem-lo-xo-tua-n-anh-bac-giang.html
 [www.diepxuan.com]
 match = 4.8%%
 title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html?srsltid=AfmBOoql5KmE72G80w2IzeNGwQW7PAJ4FWDpxFbRHSLTYuj6vGy5uCU_
 
 [shopee.vn]
 match = -61.9%%
