--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-06 00:39:42
+lastsearch = 2024-08-06 01:44:55
 
 [everonvn.com.vn]
-match = -66.7%%
-title = Bảng Giá Bán Bộ Chăn Ga Gối Hàn Quốc Everon Est-19032 ...
-url = https://everonvn.com.vn/everon/742/bo-everon-est19032
+match = -74.1%%
+title = Bảng giá bán bộ chăn ga gối Hàn Quốc Everon Epc-19041 in ...
+url = https://everonvn.com.vn/everon/750/bo-everon-epc-19041
 
 [everon.com.vn]
 match = 40.0%%
