--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-05 23:56:05
+lastsearch = 2024-08-06 01:57:21
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -17,9 +17,9 @@ title = Bộ ga chun Velina V18 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v18
 
 [shopee.vn]
-match = -66.7%%
-title = bộ chăn ga gối hè giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga gối hè
+match = -114.3%%
+title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
+url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
 match = -14.3%%
@@ -140,4 +140,9 @@ url = https://jysk.vn/bo-vo-chan-goi-ga
 match = -14.3%%
 title = Bộ Chăn Ga Gối Muslin 4 Lớp Màu Kem ...
 url = https://runa.vn/bo-chan-ga-goi-muslin-4-lop-mau-kem
+
+[everonhanquoc.vn]
+match = -47.6%%
+title = Bộ Chăn Ga Gối Everon ESTJ 24032: Giấc Mơ Hoa
+url = https://everonhanquoc.vn/everon/13887/bo-chan-ga-goi-everon-estj-24032
 
