--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-08-06 01:00:24
+lastsearch = 2024-08-06 01:54:34
 
 [demxanh.com]
 match = -39.1%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu trúc Cao Bằng Cao Sơn mới nhất 2024
 url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-cao-son-moi-nhat-2019.html
 
 [www.diepxuan.com]
-match = 26.1%%
-title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
+match = 21.7%%
+title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
 
 [uannga.vn]
 match = 56.5%%
@@ -23,8 +23,8 @@ url = https://uannga.vn/index.php/shops/chieu-mat/chieu-truc-cao-bang-150-190.ht
 
 [shopee.vn]
 match = -69.6%%
-title = Chiếu Trúc Cao Bằng-Tây Bắc-Chiếu Trúc Tăm chất lượng ...
-url = https://shopee.vn/Chiếu-Trúc-Cao-Bằng-Tây-Bắc-Chiếu-Trúc-Tăm-chất-lượng-cao-1-2x1-9m-i.158114102.5532697972
+title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
+url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
 
 [chuyenhangviet.com]
 match = -43.5%%
