--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-05 23:45:29
+lastsearch = 2024-08-06 01:50:26
 
 [demre.com.vn]
-match = 61.1%%
-title = Chiếu nhựa 160x200
-url = https://demre.com.vn/chieu-nhua-160x200
+match = 76.0%%
+title = Chiếu nhựa cao cấp 180x200
+url = https://demre.com.vn/chieu-nhua-cao-cap-180x200
 
 [www.facebook.com]
 match = 42.1%%
