--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-05 22:30:06
+lastsearch = 2024-08-06 01:51:50
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -430,4 +430,9 @@ url = https://www.koreanwar2.org/kwp2/usmc/003/M003_CD3_HISTORICAL_DIARY_DECEMBE
 match = -100.0%%
 title = 12:00 PM Korea Time to Your Local Time Conversion
 url = https://www.timebie.com/std/korea.php?q=12
+
+[www.nasdaq.com]
+match = -60.0%%
+title = Stocks Slump on US Economic Growth Risks
+url = https://www.nasdaq.com/articles/stocks-slump-us-economic-growth-risks
 
