--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-08-05 22:29:27
+lastsearch = 2024-08-06 01:53:32
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -104,7 +104,7 @@ url = https://www.dol.gov/agencies/ofccp/debarred-list
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/3rd_Battalion,_3rd_Marines
+url = https://en.wikipedia.org/wiki/Category:Military_units_and_formations_of_the_United_States_Marine_Corps_in_the_Vietnam_War
 
 [www.johnknoop.com]
 match = 5.6%%
@@ -167,9 +167,9 @@ title = La souris noire morlaix [thVqRd]
 url = https://www.nitrc.org/links/?group_id=51&url=https://9215487.xn--h1aakbimdbl.xn--p1ai/5428367u6fe43a
 
 [www.ncbi.nlm.nih.gov]
-match = -113.6%%
-title = Molecular Biology of Lung Cancer: Clinical Implications
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3367865/
+match = 9.1%%
+title = Bacterial Terpenome - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
 
 [www.gsa.gov]
 match = -185.7%%
