--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-06 00:48:16
+lastsearch = 2024-08-06 01:47:42
 
 [demxanh.com]
-match = 18.2%%
-title = Thảm trải giường lông cừu TLC 04
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-04.html?srsltid=AfmBOop5w_NIqZaDhXJK1GHK9HY56srQeSTbjugnPSRG_i1-I3nly2ee
+match = -27.3%%
+title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 3
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=3
+title = Thảm ghế thảm giường - Trang 5
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
 
 [decoviet.vn]
-match = 23.8%%
-title = Thảm Sofa Phòng Khách
-url = https://decoviet.vn/tham-phong-khach/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
@@ -34,7 +34,7 @@ url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOooJjN_s7-xWWqqiduUnfAgLZHeLhqYzYBq5DlvOsRp7qXMaSo25
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [flexhouse.vn]
 match = -90.9%%
@@ -132,9 +132,9 @@ title = Habitación Avileña Tropical en Aguadulce, Almería
 url = https://www.booking.com/hotel/es/habitacion-avilena-tropical-en-aguadulce.vi.html&
 
 [www.facebook.com]
-match = -4.5%%
-title = Buy and Sell Costa Blanca
-url = https://www.facebook.com/groups/2225184044242220/?locale=vi_VN
+match = -50.0%%
+title = Al Khail Gate renting rooms And partition
+url = https://www.facebook.com/groups/851519008860168/?locale=vi_VN
 
 [bearsofa.com]
 match = -68.2%%
