CI images update

--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-05 23:55:44
+lastsearch = 2024-08-06 02:21:09
 
 [shopee.vn]
-match = -214.3%%
-title = mùng chụp tự bung cao cấp 18 x 18 m giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=mùng chụp tự bung cao cấp 18 x 18 m
+match = -178.6%%
+title = Màn chụp tự bung đỉnh vuông cao cấp bảo hành 18 tháng
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-cao-cấp-bảo-hành-18-tháng-Mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-i.321953124.23825582591
 
 [mungthienmetta.com]
 match = -185.7%%
@@ -32,9 +32,9 @@ title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
 url = https://www.mantubung.com/mung-chup-tu-bung.html
 
 [www.lazada.vn]
-match = -242.9%%
-title = màn tự bung hàng cao cấp, nhiều kích thước, gấp gọn tiện ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-man-tu-bung-hang-cao-cap-nhieu-kich-thuoc-gap-gon-tien-dung-chong-muoi-hieu-qua-i1531214550.html
+match = -164.3%%
+title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html?srsltid=AfmBOoquWAKcxgPFHdT-2330NjqjHZniHXNvgFSa9WfnZGWbTGrE7ouE
 
 [www.mungbaobao.com]
 match = -214.3%%
