--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-05 23:36:00
+lastsearch = 2024-08-06 02:24:14
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -107,8 +107,8 @@ title = SÁCH HƯỚNG DẪN HỌC VIÊN
 url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual - 6 ed..pdf
 
 [drhc-cosmetics.com]
-match = -60.7%%
-title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
+match = -71.4%%
+title = Goat Milk Orange (110g, 3.8oz.) (Skin brightening, Anti- ...
 url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
 
 [quangduc.com]
@@ -128,8 +128,8 @@ url = https://baomoi.com/tram-ra-da-18-to-chuc-hien-mau-nhan-dao-c49400442.epi
 
 [healthyct.vn]
 match = -64.3%%
-title = Thực phẩm bảo vệ sức khỏe Vitamin B Mix DHC | healthyct.vn
-url = https://healthyct.vn/san-pham/vitamin-b-mix-dhc/
+title = Đông Trùng Hạ Thảo Tươi (hộp 250g) | HEALTHY CT CO., LTD
+url = https://healthyct.vn/san-pham/dong-trung-ha-thao-tuoi-tam-an/
 
 [www.tiktok.com]
 match = -25.0%%
