--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-05 21:42:37
+lastsearch = 2024-08-06 02:18:21
 
 [shopee.vn]
-match = -41.7%%
-title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
-url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
+match = -45.8%%
+title = chiếu điều hòa kèm gối giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = 29.2%%
 title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html?srsltid=AfmBOooO1CySF87ZIMn7djKwExBmvyh-N8js7s2tiLdgBP5GE-aptu4H
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html?srsltid=AfmBOor5vPX3KOa8BeTsFwo2DSOedY05p7Pc43wwnSEnW_hMPhWumpYD
 
 [goni.vn]
 match = 4.2%%
@@ -29,7 +29,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demluxury.com.vn]
 match = -8.3%%
 title = Chiếu mát, chiếu điều hòa cao cấp Luxury Home
-url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/
+url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/?srsltid=AfmBOorGtplAaTMbghw68jDXoPa2_f8aiB9ZDaOG7H2MU-oweg5hP2hk
 
 [kyoryo.vn]
 match = 12.5%%
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = 37.5%%
-title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa?srsltid=AfmBOoq57jWlp7nbdQ1wAE4CYGvpa0KNKNvLQmex45192v0-AgyLfJB1
+match = -20.8%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOoqhsIOgi5PZjXaj_TK3BPSsweKPCVYflXgf6Ev7iXGb7oxq4SuS
 
 [joliefam.vn]
 match = -37.5%%
