--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-05 22:27:41
+lastsearch = 2024-08-06 02:23:32
 
 [demxanh.com]
-match = 40.7%%
-title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
+match = -14.8%%
+title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooUALioMYBIAqkSIIYnl3qn6wqyUUyUuevlm0mi7PlwpYkYwGBm
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -33.3%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [goni.vn]
 match = 18.5%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [russo.vn]
-match = 29.6%%
-title = Chiếu điều hòa cao su non 1m8x2m - Russo
-url = https://russo.vn/chieu-dieu-hoa-cao-su-1m8x2m/
+match = -37.0%%
+title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
+url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 
 [www.dienmayxanh.com]
 match = -48.1%%
