--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-05 21:55:30
+lastsearch = 2024-08-06 02:29:51
 
 [demxanh.com]
 match = -15.4%%
@@ -19,7 +19,7 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-lua/
 [tiki.vn]
 match = -7.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307875
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
 
 [foreverbedding.net]
 match = 38.5%%
@@ -70,4 +70,9 @@ url = https://nasago.vn/chieu-dieu-hoa-tencel-latex/
 match = 44.0%%
 title = Chiếu Mây Nekio 180x200cm
 url = http://nekio.vn/chieu-cao-cap/chieu-may-nekio-160x200cm.html
+
+[kyoryo.vn]
+match = 11.5%%
+title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
+url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 
