--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-06 01:43:56
+lastsearch = 2024-08-06 02:22:13
 
 [helloviettravel.com]
 match = -187.5%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -143.8%%
-title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
-url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
+match = -193.8%%
+title = Du lịch Mỹ tự túc #5: Đừng đến Arizona một mình! USA trip
+url = https://www.youtube.com/watch?v=7v7EBziokmM
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
