--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-06 00:33:25
+lastsearch = 2024-08-06 02:26:45
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -77,9 +77,9 @@ title = Sạt lở làm nhiều xã biên giới tại Lai Châu bị chia cắt
 url = https://dangcongsan.vn/nong-trong-ngay/sat-lo-lam-nhieu-xa-bien-gioi-tai-lai-chau-bi-chia-cat-tam-thoi-673990.html
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -100.0%%
+title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
+url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [baohungyen.vn]
 match = -4.8%%
