--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-06 00:43:59
+lastsearch = 2024-08-06 02:20:48
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -122,8 +122,8 @@ title = DS No gui Cong BHXH T7.2022.xlsx
 url = https://hanoi.baohiemxahoi.gov.vn/content/tintuc/Lists/News/Attachments/31604/DS No gui Cong BHXH T7.2022.pdf
 
 [www.amazon.com]
-match = 19.0%%
-title = Amazon.com: Everhome Designs
+match = 25.0%%
+title = Everhome Designs
 url = https://www.amazon.com/Everhome-Designs/s?k=Everhome+Designs
 
 [core.ac.uk]
@@ -165,4 +165,14 @@ url = https://edelmanhome.com/collections/new-collection/16-20
 match = -28.6%%
 title = Đệm bông ép giá rẻ Hàn Quốc Nanomax
 url = https://khodem.vn/dem-bong-ep-gia-re-nanomax/
+
+[dunlopilloluxury.com]
+match = 25.0%%
+title = Nệm Everhome
+url = https://dunlopilloluxury.com/collections/nem-everhome
+
+[nemtoancau.com]
+match = 25.0%%
+title = NỆM EVERHOME
+url = http://nemtoancau.com/everhome
 
