--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-05 16:45:50
+lastsearch = 2024-08-06 02:22:32
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,14 +22,14 @@ title = ADDITIONAL CASE INFORMATION
 url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Margaret Tempero, MD
-url = https://profiles.ucsf.edu/margaret.tempero
+match = -7.7%%
+title = Li Zhang, PhD
+url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
-match = -168.4%%
-title = An integrative review of physical activity in adults with ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8831770/
+match = -173.7%%
+title = Evaluation of the Extent of Variant Histology in Urothelial ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8988952/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -54,7 +54,7 @@ url = https://www.techcosmos.com.hk/thomas/publications/
 [www2.ed.gov]
 match = -126.3%%
 title = Candidates for the US Presidential Scholars Program
-url = https://www2.ed.gov/programs/psp/2023/candidates.pdf
+url = https://www2.ed.gov/programs/psp/2024/candidates.pdf
 
 [www.ajnr.org]
 match = 21.1%%
