CI images update

--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-05 20:53:34
+lastsearch = 2024-08-06 02:36:35
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOoqt-Nf7frjpAlka8Qub81EmUCb3Zj1acKqItq0DGg-lu5bMtEcO
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
 match = -6.7%%
