--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-05 18:37:39
+lastsearch = 2024-08-06 02:33:46
 
 [eva.vn]
 match = -163.2%%
@@ -49,7 +49,7 @@ url = https://books.google.com/books?id=oC8iDAAAQBAJ&pg=PA325&lpg=PA325&dq=chieu
 [www.diepxuan.com]
 match = 5.3%%
 title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html?srsltid=AfmBOoo6oO25sp3k6cbQd2WTnJ1ZdpWSkFhQb5nCp1c4O4vL_86AUhpt
 
 [mietistudio.com]
 match = -131.6%%
@@ -182,8 +182,8 @@ title = Về Mộc Hóa ngắm bông súng, xem đan chiếu bàng
 url = https://www.phunuonline.com.vn/ve-moc-hoa-ngam-bong-sung-xem-dan-chieu-bang-a1454161.html
 
 [hoamoclan.org]
-match = -147.4%%
-title = Cây giống hoa mộc lan – Hướng dẫn cách trồng, chăm sóc ...
+match = -57.9%%
+title = Hướng dẫn cách trồng, chăm sóc hoa mộc lan
 url = https://hoamoclan.org/
 
 [www.webtretho.com]
@@ -359,7 +359,7 @@ url = https://www.qdnd.vn/quoc-phong-an-ninh/xay-dung-quan-doi/bong-hong-noi-tha
 [spacet.vn]
 match = -157.9%%
 title = Cây tùng bồng lai: Đặc điểm, ý nghĩa, công dụng và cách ...
-url = https://spacet.vn/blog/cham-soc-nha/cay-tung-bong-lai-dac-diem-y-nghia-cong-dung-va-cach-trong
+url = https://spacet.vn/blog/cham-soc-nha/cay-tung-bong-lai-dac-diem-y-nghia-cong-dung-va-cach-trong?srsltid=AfmBOor_6eD2XHN1jmdpnkam6xymfSRXqq6oZkhxRIhjes2lPGRt5YP3
 
 [bnews.vn]
 match = -105.3%%
