--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-06 01:51:35
+lastsearch = 2024-08-06 02:29:35
 
 [demxanh.com]
-match = -6.9%%
-title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOooM0VpX58oa3-xsZ7aPSZcK7-dv55FybOG2v_aAavPv2YM0zoBi
+match = 28.0%%
+title = Chăn ga gối Singapore lụa
+url = https://demxanh.com/chan-ga-goi-singapore-lua.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối pyeoda
 url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [demchatluong.com]
-match = -6.9%%
-title = Bộ Chăn Ga Gối Lụa Pyeoda Skysilk cao cấp - Đệm Chất Lượng
-url = https://demchatluong.com/san-pham/bo-chan-ga-goi-lua-pyeoda-skysilk/
+match = -17.2%%
+title = Bộ Chăn Ga Gối Tencel Adaptive 5 món - Đệm Chất Lượng
+url = https://demchatluong.com/san-pham/bo-chan-ga-goi-tencel-adaptive-5-mon/
 
 [changagoinemgiasi.com]
 match = 3.4%%
