--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-08-05 22:13:06
+lastsearch = 2024-08-06 02:30:17
 
 [shopee.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -33.3%%
+title = Chiếu điều hòa cao su non coco mẫu mới 2024 tặng kèm 2 ...
+url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-coco-mẫu-mới-2024-tặng-kèm-2-vỏ-gối-Ga-cao-su-non-điều-hòa-đủ-kích-thước-i.891230701.25266141134
 
 [demxanh.com]
 match = 14.8%%
@@ -72,9 +72,9 @@ title = Tìm Hiểu Chiếu Điều Hòa giá Bao Nhiêu chất liệu thế nà
 url = https://3dthinking.vn/tim-hieu-chieu-dieu-hoa-gia-bao-nhieu-chat-lieu-the-nao/
 
 [www.youtube.com]
-match = -44.4%%
-title = SỰ THẬT| Chiếu điều hòa tencel - Chiếu cao su non có mát ...
-url = https://www.youtube.com/watch?v=OShfCNiOmA8
+match = -55.6%%
+title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
+url = https://www.youtube.com/watch?v=ccaTWASdw7I
 
 [lybalansieucute.com]
 match = 33.3%%
