--- a/images/chieu-nhua-ha-noi-140x190/config.ini
+++ b/images/chieu-nhua-ha-noi-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 lastopen = 2024-08-03 06:31:32
 
 [search]
-lastsearch = 2024-08-06 01:47:22
+lastsearch = 2024-08-06 02:25:29
 
 [www.diepxuan.com]
 match = 48.0%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 [www.facebook.com]
 match = 20.0%%
 title = Chiếu Trúc Tre Việt Nam | Hanoi
-url = https://www.facebook.com/chieutructrevietnam/?locale=el_GR
+url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [demxanh.com]
-match = -52.0%%
-title = Đệm cao su Vạn Thành Standard giá rẻ nhất Hà Nội
-url = https://demxanh.com/dem-cao-su-van-thanh-standard.html
+match = -20.0%%
+title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
+url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 
 [chieucoi.com.vn]
 match = -68.0%%
