--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-05 20:45:55
+lastsearch = 2024-08-06 02:30:38
 
 [www.everonvn.vn]
-match = 20.0%%
-title = Đệm bông Everon 1m, 1m2, 1m4
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
+match = -105.0%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [everon.vip]
 match = 50.0%%
@@ -47,8 +47,8 @@ title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
 url = https://everon.com.vn/kich-co/120200/
 
 [demqueensweet.com]
-match = -130.0%%
-title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
+match = -65.0%%
+title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
 url = https://demqueensweet.com/
 
 [www.lazada.vn]
@@ -150,4 +150,9 @@ url = https://www.khodemthanhdo.com/products/dem-bong-ep-everon-han-quoc-vo-gam
 match = -85.0%%
 title = Đệm bông ép Everon Hàn Quốc chính hãng giá tốt!
 url = https://everon365.com/dem-bong-ep-everon-han-quoc/
+
+[khonem.com]
+match = -40.0%%
+title = Nệm bông ép Everon Padding - Khuyến mãi
+url = https://khonem.com/nem-bong-ep-everon-padding-120-x-195-x-9-cm.html
 
