CI images update

--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-06 00:20:29
+lastsearch = 2024-08-06 02:45:34
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -122,9 +122,9 @@ title = Thiếu tướng Lê Đình Cường kiểm tra công tác huấn luyệ
 url = https://canhsatbien.vn/thieu-tuong-le-dinh-cuong-kiem-tra-cong-tac-huan-luyen-uav-lv-31/12006/110
 
 [znews.vn]
-match = -87.5%%
-title = Số áo đặc biệt của sao trẻ Real Madrid
-url = https://znews.vn/so-ao-dac-biet-cua-sao-tre-real-madrid-post1488646.html
+match = -206.2%%
+title = Real Madrid muốn có Alexander-Arnold miễn phí - Thể thao
+url = https://znews.vn/real-madrid-muon-co-alexander-arnold-mien-phi-post1490144.html
 
 [vtcnews.vn]
 match = -106.2%%
@@ -357,9 +357,9 @@ title = C1 Sport - phường Hóa An vô địch Giải bóng đá các xã ...
 url = https://baodongnai.com.vn/the-thao/202406/c1-sport-phuong-hoa-an-vo-dich-giai-bong-da-cac-xa-phuong-thi-tran-tinh-dong-nai-2024-eef4b09/
 
 [m.facebook.com]
-match = -143.8%%
-title = TUYỂN DỤNG | ĐỂ MỞ RỘNG VĂN PHÒNG CHÚNG TÔI ...
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8409393722417934/
+match = -93.8%%
+title = MỘC MIỀN NAM🌳 ⚡️MUA HÀNG LIÊN LẠC ZALO ĐỂ ...
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2409465526100579/
 
 [thanhnien.vn]
 match = -187.5%%
