--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-05 22:21:23
+lastsearch = 2024-08-06 02:55:21
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [shopee.vn]
-match = -52.4%%
-title = Chiếu Trúc Gỗ Xịn Thái Lan 1,5mx1,9m-1,6mx2m-1, ...
-url = https://shopee.vn/Chiếu-Trúc-Gỗ-Xịn-Thái-Lan-1-5mx1-9m-1-6mx2m-1-8mx2m-Hàng-Cao-Cấp-i.158114102.5332512087
+match = -95.2%%
+title = chiếu tre thái lan loại 1 , hàng có sẵn m2xm9, m5x m9 ...
+url = https://shopee.vn/chiếu-tre-thái-lan-loại-1-hàng-có-sẵn-m2xm9-m5x-m9-m8x2m-2mx2m2-i.264060043.8153444972
 
 [demxanh.com]
 match = 14.3%%
@@ -42,9 +42,9 @@ title = Bảo hộ Chỉ dẫn địa lý “Cao Bằng” cho sản phẩm trú
 url = https://ipvietnam.gov.vn/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-2/pop_up?_101_INSTANCE_7xsjBfqhCDAV_viewMode=print
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = 9.5%%
+title = Chiếu trúc cao cấp Thái Lan 1m6x200cm
+url = https://chieutrelanlan.com/chieu-truc-cao-cap-thai-lan-1m6x2m-87.html
 
 [thegioidemviet.vn]
 match = -23.8%%
@@ -560,4 +560,9 @@ url = https://danchuphapluat.vn/quy-dinh-phap-luat-ve-bao-ve-tai-nguyen-rung-thu
 match = -138.1%%
 title = Vắc xin Gardasil 4: Tác dụng, chỉ định, liều dùng và lịch tiêm
 url = https://tamanhhospital.vn/tiem-chung/vac-xin-gardasil-4/
+
+[issmitliebe.de]
+match = -100.0%%
+title = Mông Thì To Bà đàn Sao - Nghĩa là mày rậm thì Apr
+url = https://issmitliebe.de/7808415-đàn-bà-mông-to-thì-sao.html
 
