--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-05 23:43:04
+lastsearch = 2024-08-06 02:53:37
 
 [www.bible.com]
 match = -128.6%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung 2016 - F2 - xanh viền xanh
 url = https://mungmocmien.com/products/man-chup-tu-bung-2016-code-f2-9
 
 [munghoangphat.com]
-match = -21.4%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -135.7%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [manthutrang.com]
 match = -207.1%%
@@ -82,9 +82,9 @@ title = Fan Bingbing 范冰冰 (@bingbing_fan)
 url = https://www.instagram.com/bingbing_fan/?hl=en
 
 [en.wikipedia.org]
-match = 27.3%%
-title = Kim Tu-bong
-url = https://en.wikipedia.org/wiki/Kim_Tu-bong
+match = -66.7%%
+title = Anggun
+url = https://en.wikipedia.org/wiki/Anggun
 
 [mail.storyfb.com]
 match = 35.7%%
@@ -180,4 +180,9 @@ url = https://bandcamp.com/
 match = -128.6%%
 title = The Ultimate Guide To New Zealand Slang
 url = https://brenontheroad.com/travellers-guide-new-zealand-slang/
+
+[www.parker.com]
+match = 0.0%%
+title = Home | Parker US
+url = https://www.parker.com/us/en/home.html
 
