--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-06 00:45:42
+lastsearch = 2024-08-06 02:48:42
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -108.7%%
@@ -32,9 +32,9 @@ title = Korean Embassy in South Africa 주남아공한국대사관
 url = https://www.facebook.com/KoreanEmbassySouthAfrica/
 
 [www.cia.gov]
-match = -30.4%%
-title = n. korean patrol boats se[15489169].pdf
-url = https://www.cia.gov/readingroom/docs/n. korean patrol boats se[15489169].pdf
+match = -82.6%%
+title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
+url = https://www.cia.gov/readingroom/document/06638269
 
 [journal.transformativeworks.org]
 match = -91.3%%
@@ -117,14 +117,14 @@ title = NEM jumps to a 42 week high – reasons unknown
 url = https://cryptoslate.com/nem-jumps-to-a-42-week-high-reasons-unknown/
 
 [apps.dtic.mil]
-match = -47.8%%
-title = EBB and Flow, November 1950-July 1951 - DTIC
-url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
+match = -69.6%%
+title = Task Force Smith--A Leadership Failure? - DTIC
+url = https://apps.dtic.mil/sti/tr/pdf/ADA251335.pdf
 
 [www.tiktok.com]
-match = -87.0%%
-title = Let’s find out why these ✨viral sour grapes✨ have a ...
-url = https://www.tiktok.com/@eatsbyrachel/video/7340438447867317547?lang=en
+match = -104.3%%
+title = Teaching Korean basics to @Nisqy I hope it helps 😈 @SK ...
+url = https://www.tiktok.com/@laurebuliiv/video/7378201658527911176
 
 [30rates.com]
 match = -52.2%%
