--- a/images/tham-giuong-bode-150x190/config.ini
+++ b/images/tham-giuong-bode-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bode-150x190.html
 lastopen = 2024-06-17 17:46:25
 
 [search]
-lastsearch = 2024-08-05 23:47:01
+lastsearch = 2024-08-06 02:48:21
 
 [www.diepxuan.com]
 match = 29.2%%
 title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOopjB4kAbglU4-Mou6_Tn20Y2jb-Lgf2ZKoQDXZiqb3SkehS_wt-
 
 [www.tripadvisor.com]
 match = -112.5%%
