--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-05 22:39:38
+lastsearch = 2024-08-06 02:56:24
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -152.6%%
+title = Hoa Mộc Hương ta nở bao lâu thì tàn - Khi nào lập lại hoa?
+url = https://www.youtube.com/watch?v=IL1ZIO7fIro
 
 [trangtrisanvuon.vn]
 match = -147.4%%
@@ -227,9 +227,9 @@ title = Khuyến cáo thu nhặt, xử lý quả cây ngô đồng trong trườ
 url = https://baolamdong.vn/toa-soan-ban-doc/202303/khuyen-cao-thu-nhat-xu-ly-qua-cay-ngo-dong-trong-truong-hoc-4861fbb/
 
 [shopee.vn]
-match = -100.0%%
-title = Chiếu Trúc Xuất Nhật Mộc Hương Cao Cấp, Chiếu Điều ...
-url = https://shopee.vn/Chiếu-Trúc-Xuất-Nhật-Mộc-Hương-Cao-Cấp-Chiếu-Điều-Hòa-Mùa-Hè-i.252624902.17494018040
+match = -94.7%%
+title = Chiếu trúc Mộc lá cao cấp chất lượng cao đủ kích cỡ
+url = https://shopee.vn/Chiếu-trúc-Mộc-lá-cao-cấp-chất-lượng-cao-đủ-kích-cỡ-i.296736591.8061367106
 
 [m.facebook.com]
 match = -110.5%%
