--- a/images/chieu-truc-que-lam-loai-2-18/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-18.html
 lastopen = 2024-06-07 00:19:47
 
 [search]
-lastsearch = 2024-08-05 23:47:43
+lastsearch = 2024-08-06 02:47:20
 
 [chieutrelanlan.com]
 match = -7.1%%
@@ -37,9 +37,9 @@ title = Chiếu trúc Quế Lâm .1,6 ×2m
 url = https://www.lazada.vn/products/chieu-truc-que-lam-16-2m-i1517425180.html
 
 [www.facebook.com]
-match = 28.6%%
-title = Chiếu Tre Lan Lan | Ho Chi Minh City
-url = https://www.facebook.com/chieutruclanlan/
+match = 71.4%%
+title = Chiếu Trúc Quế Lâm | Hai Phong
+url = https://www.facebook.com/ChieuTrucQueLam/
 
 [tiki.vn]
 match = 34.6%%
@@ -48,8 +48,8 @@ url = https://tiki.vn/chieu-truc-hat-que-lam-p87383232.html?spid=170118061/
 
 [www.sendo.vn]
 match = -17.9%%
-title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 [Được ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-duo-c-kie-m-ha-ng-32003669-117423285.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722729600426_undefined_-1_cateLvl2_0_45_23_-1
+title = Chiếu Trúc Hạt Quế Lâm kích thước 2m2x2m [Được kiểm ...
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-2m2x2m-duo-c-kie-m-ha-ng-18050806-117250489.html
 
 [chieutrucsaigon.com]
 match = 32.1%%
@@ -100,4 +100,9 @@ url = https://vietchannel.wordpress.com/2010/03/06/trinh-hoi-and-the-new-wifey-d
 match = -10.7%%
 title = Chiếu Quế lâm - Siêu Thị Điện Máy Nguyễn Kim
 url = https://sieuthinguyenkim.com/chieu-que-lam-nsh4041837720.html
+
+[h5.lazada.vn]
+match = 70.4%%
+title = Chiếu trúc Quế Lâm .1,6 ×2m
+url = https://h5.lazada.vn/products/chieu-truc-que-lam-16-2m-i1517425180-s6366880670.html?&search=pdp_v2v?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ba51e7de-ae9e-4669-ad64-6e1585e68ed3__1517425180__12711__trigger2i__287002__0.057__0.057__0.0__0.0__0.0__0.057__9__null__null__null__null__null__null____950000.0__0.16842105263157892__0.0__0__790000.0__138442,138522__null__null__null__3650.16544_955.3632__null__32104__null__0.0__0.0________null__null__0
 
