--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-05 21:54:26
+lastsearch = 2024-08-06 02:46:35
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx0Dc3E0&sig=ACfU3U3D-SZO-uUHreyhk1ixbyZTrv16gw&hl=en&sa=X&ved=2ahUKEwjPlvXTjd6HAxXA48kDHWEGCqcQ6AF6BAgjEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx0Fa_H-&sig=ACfU3U1FoAbmhE4VU2pADlka4xaYuMKMxg&hl=en&sa=X&ved=2ahUKEwiwkbL6zt6HAxUvFlkFHTxWBREQ6AF6BAgaEAM
 
 [ottawabraves.com]
 match = -292.3%%
