--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-05 21:44:20
+lastsearch = 2024-08-06 02:59:50
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -74,7 +74,7 @@ url = https://en.bab.la/dictionary/vietnamese-english/giường
 [jangin.vn]
 match = -354.5%%
 title = Giường Mika Q(1.6m) Chân cao - 장인가구 - Nội Thất Hàn ...
-url = https://jangin.vn/shop/giuong-mika-q1-6m-chan-cao/
+url = https://jangin.vn/shop/giuong-mika-q1-6m-chan-cao/?srsltid=AfmBOop2KIXB_vXIXF9ZZEsl7Uzp8ukhrL9BGnm1r6Jbq-_s7U6QWQLQ
 
 [www.litera.com]
 match = 0.0%%
@@ -107,9 +107,9 @@ title = Giường MN 5
 url = http://thietbimamnontienloc.com/san-pham/giuong-mn-5-253.html
 
 [www.airbnb.com.vn]
-match = -309.1%%
-title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
-url = https://www.airbnb.com.vn/rooms/929459059736966278
+match = -400.0%%
+title = Phòng tiêu chuẩn 1 giường đôi tại Millennium Minneapolis - Airbnb
+url = https://www.airbnb.com.vn/hotels/1059440610457947224
 
 [freemeteo.cl]
 match = -281.8%%
@@ -117,14 +117,14 @@ title = Weather Xom Giuong (1) - Long term weather forecast
 url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=7&language=english&country=vietnam
 
 [www.booking.com]
-match = -290.9%%
-title = Country Inn & Suites by Radisson, Albertville, MN
-url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
+match = -336.4%%
+title = Hampton Inn and Suites Minneapolis University Area, MN
+url = https://www.booking.com/hotel/us/hampton-inn-and-suites-minneapolis-university-area-mn.vi.html
 
 [www.agoda.com]
-match = -263.6%%
-title = Country Inn & Suites by Radisson, Woodbury, MN
-url = https://www.agoda.com/vi-vn/country-inn-suites-by-radisson-woodbury-mn/hotel/woodbury-mn-us.html
+match = -354.5%%
+title = AmericInn by Wyndham Proctor Duluth Black Woods Conv Ctr
+url = https://www.agoda.com/vi-vn/americinn-by-wyndham-proctor-duluth-black-woods-conv-ctr/hotel/proctor-mn-us.html
 
 [sumika.vn]
 match = -300.0%%
@@ -180,4 +180,9 @@ url = https://cofa.vn/giuong-sat-1m-x-2m/
 match = -309.1%%
 title = Shop GhostBed: Luxury Cooling Mattresses & Bedding ...
 url = https://www.ghostbed.com/
+
+[www.tripadvisor.com.vn]
+match = -281.8%%
+title = Nhà nghỉ phục vụ giường và bữa sáng tại Minneapolis
+url = https://www.tripadvisor.com.vn/Hotels-g43323-c2-Minneapolis_Minnesota-Hotels.html
 
