CI images update

--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-06 02:18:40
+lastsearch = 2024-08-06 03:15:51
 
 [xoptraisan.info]
 match = -64.7%%
@@ -32,9 +32,9 @@ title = Thảm nỉ ghép trản sàn nhà Tường Lâm cao cấp - Lombomshop!
 url = https://lombom.com/tham-ni-ghep-san-nha/
 
 [trieuchau.com]
-match = -129.4%%
-title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
-url = https://trieuchau.com/
+match = -105.9%%
+title = 40*40*10 tấm - Thảm xốp trải sàn vân gỗ Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28075/Tham-Xop-40x40cm/404010-tam--Tham-xop-trai-san-van-go-Au-Lac
 
 [www.facebook.com]
 match = 0.0%%
@@ -187,9 +187,9 @@ title = Lhagang Choyu Wordlist with the Thamkhas Dialect of ...
 url = https://core.ac.uk/download/pdf/154886317.pdf
 
 [m.facebook.com]
-match = -158.8%%
-title = THẢM XỐP TRẢI SÀN - Thảm xốp nỉ kẻ Âu Lạc bịch 10 tấm ...
-url = https://m.facebook.com/xoplotsan/photos/thảm-xốp-nỉ-kẻ-âu-lạc-bịch-10-tấm-mỗi-tấm-kích-thước-60-x-60cm-khoản/724213377684173/
+match = -129.4%%
+title = THẢM XỐP TRẢI SÀN - Xốp ghép vân gỗ cao cấp Tường ...
+url = https://m.facebook.com/xoplotsan/photos/xốp-ghép-vân-gỗ-cao-cấp-tường-lâm-bịch-10-tấm-mỗi-tấm-kt-60-x-60cm-khoa/724213074350870/
 
 [citydocs.cityoforange.org]
 match = -194.1%%
