--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-06 00:19:24
+lastsearch = 2024-08-06 03:15:07
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgqOLoo9&sig=ACfU3U1krLs6FhOTaanNkcEtEuTg7eXBKA&hl=en&sa=X&ved=2ahUKEwjY15SHrt6HAxWcKEQIHV28Hr0Q6AF6BAg1EAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgqPLuic&sig=ACfU3U2LX47_-6ap8G5_yZGvKHnqiSKQhQ&hl=en&sa=X&ved=2ahUKEwi26cSq1d6HAxViGlkFHfItLGMQ6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
